--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -48,6 +48,12 @@
 དེ་མ་ཚད་ ཚོང་ལམ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ ཡུ་ཨེན་ཌི་པི་གིས་ གཡུས་ཁའི་བཟོ་སྐྲུན་པ་ཚུ་ རྒྱལ་སྤྱི་ཚོང་ལམ་དང་གཅིག་ཁར་ཡང་མཐུན་འབྲེལ་འབད་བྱིནམ་ཨིན། གཞན་ཡང་ མི་སྡེ་ལས་ཚོགས་ཚུ་བརྒྱུད་དེ་ ལས་སྣ་ཚུ་དང་སྲིད་བྱུས་ཚུ་གཞི་བཙུགས་འབད་དེ་ སྐུལ་ཁྱབ་བརྡ་སྤྲོད་འབདཝ་ཨིན། རྒྱལ་ཁབ་ཀྱི་གནས་ཚད་ནང་ལུ་འབད་བ་ཅིན་ གསོ་བ། ཤེས་རིག། འཐུང་ཆུ་བཀྲམ་སྤེལ། སོ་ནམ་རྒྱ་སྐྱེད་དང་ བསྐྱིན་འགྲུལ་ཆུང་བའི་ཞབས་ཏོག་ཚུ་བྱིན་ནི་ཡོད། དེ་འབདཝ་ལས་ ལས་སྡེ་འདི་ལུ་ ཁས་བླངས་ཀྱི་ཐོག་ལས་ཞབས་ཏོག་འགྲུབ་མི་ཡོངས་གྲགས་ཅན་གྱི་མི་དང་ ཚོང་ཚབ་མཐུན་འབྲེལ་པ་ལེ་ཤ་ཅིག་གིས་ར་ འཛམ་གླིང་ལུ་གནོད་པའི་དོན་ཚན་ཚུ་ གསལ་བསྒྲགས་འབད་དེ་ འཛམ་གླིང་ཞི་བདེ་ཡར་རྒྱས་གཏང་ནི་ལུ་གཙོ་བོར་བཏོནམ་ཨིན།</big> (Sustainable Development Goals, UNDP)<br>
 <big>ཡུ་ཨེན་ཌི་པི་གིས་ འབྲུག་རྒྱལ་ཁབ་ལུ་གྲོགས་རམ་གྱི་ལས་རིམ་འདི་ སྤྱི་ལོ་ ༡༩༧༣ ལས་འགོ་བཙུགས་ཡོདཔ་ཨིན། དེ་ཡང་ མི་སྙོམ་མར་ཕབ་གཏང་ནི་དང་ སྟབས་ཉེས་པའི་མི་ཚུ་ལུ་དབང་ཆ་བྱིན་ཏེ་རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་དམིགས་ཡུལ་འགྲུབ་ནི་ལུ་ ཕན་གྲོགས་འབད་ཡི། ཡུ་ཨེན་ཌི་པི་གི་ཡིག་ཚང་འདི་ རྒྱལ་ཁབ་ནང་ སྤྱི་ལོ་ ༡༩༧༩ ལུ་གཞི་བཙུགས་འབད་ནུག། (ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༡།). སྤྱི་ལོ་ ༡༩༧༠ གི་སྐབས་ལུ་ ལས་སྡེ་འདི་གིས་ འབྲུག་རྒྱལ་ཁབ་ནང་ ལྟ་བཤལ་ལས་སྡེ་དང་གློག་མེ་ལས་འཛིན་འགོ་བཙུགས་ནིའི་ནང་རྒྱབ་སྐྱོར་འབད་དེ་ཡོདཔ་མ་ཚད་ སྤྱི་ལོ་ ༢༠༠༦ ལུ་ ངན་ལྷད་བཀག་སྡོམ་ལྷན་ཚོགས་གཞི་བཙུགས་འབད་ནི་ལུ་ཡང་ གྲོགས་རམ་འབད་ཡི། འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གཞི་བཀོད་ཀྱིས་ འབྲུག་གཞུང་ལུ་ ཁག་ཆེ་བའི་གྲོགས་རམ་འབད་དང་འབད་བཞིན་དུ་ཡོདཔ་ཨིན།</big> (UNDP Bhutan). 
 
+=== འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ། ===
+<big>༉ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ཡན་ལག་ལས་སྡེ་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ འཛམ་གླིང་ནང་ དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་བསལ་ནི་ལུ་དམིགས་གཏད་བསྐྱེད་དེ་ཕྱག་ལཱ་གནང་མི་ངོ་མ་ཅིག་ཨིན། ལས་སྡེ་འདི་གིས་ བཟའ་འཐུང་གི་གྲོགས་རམ་བྱིན་ཏེ་ མི་མཐུན་པའི་རྐྱེན་ངན་དང་དཀའ་ངལ་ནང་ཚུད་མི་ཚུ་ལུ་ ཞི་བདེ་དང་རྩ་བརྟན་ དེ་ལས་ གོང་འཕེལ་གྱི་ཐབས་ལམ་འགྲིགཔ་ཨིན། ༼འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ། ༢༠༡༤།༽<br>
+འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ ཡུ་ནཱིའི་ཊེཊི་ཨིསི་ཊེཊིགི་སྲིད་འཛིན་ ཌུ་ཝའིཊི་ཨའི་ཟུའན་ཧའུ་ཝ་ (Dwight Eisenhower) གི་བཀའ་རྒྱ་ལྟར་དུ་ སྤྱི་ལོ་ ༡༩༦༡ ལུ་གཞི་བཙུགས་གནང་ཡོདཔ་ཨིན། དེ་ཡང་འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལམ་ལུགས་ཐོག་ལས་ བཟའ་འཐུང་གྲོགས་རམ་འབད་ནི་གི་དོན་ལུ་ མོ་བཏབ་སྦེ་འགོ་འདྲེན་འཐབ་ནུག། དེ་གི་དམིགས་ལཱ་ངོ་མ་ར་ གློ་བུར་ཉེན་འཚུབ་གནས་སྟངས་ཀྱི་སྐབས་ལུ་ གྲོགས་རམ་འབད་ནི་དང་ གཞིས་ཆགས་ཉམས་གསོ་འབད་ནི་ཚུ་ཨིན། གོང་འཕེལ་གྱི་ལས་རིམ་འགོ་དང་པ་ར་ སུའི་ཌེན་ (sweden) གི་ནིའུ་བིའི་ཡེན་༼Nubians༽ ཚུ་ལུ་ སྤྱི་ལོ་ ༡༩༦༣ ལུ་འགོ་བཙུགས་ནུག། ལོ་དེ་ནང་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་འགོ་ཐོག་ ཊོ་གོ་(Togo)ལུ་སློབ་གྲྭའི་བཞེས་སྒོ་བྱིན་ནིའི་དོན་ལུ་ གནང་བ་ཐོབ་ཡོདཔ་ཨིན། གློ་བུར་ཉེན་འཚུབ་ཅན་གྱི་གནས་སྟངས་ཚུ་ནང་ བཞེས་སྒོ་དང་ གོང་འཕེལ་གྱི་གྲོགས་རམ་བྱིན་ནི་འདི་ ག་ནི་བ་གལ་ཆེ་ཤོས་ཅིག་ལུ་གྱུར་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༦༤ གི་ལོ་ལུ་འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་རིམ་ངོ་མ་ཅིག་ལུ་གྱུར་ཡོདཔ་སྦེ གསལ་བཀོད་འབད་ཡི། ད་རེས་ ཟ་སྤྱོད་ལས་རིམ་འདི་ འཛམ་གླིང་ནང་ སྲོག་སྐྱབས་དང་མི་ཚེ་འཕོ་འགྱུར་གྱི་དོན་ལུ་གྲོགས་རམ་འབད་མི་ལས་སྡེ་ གལ་ཆེ་ཤོས་ཅིག་ལུ་གྱུར་ཡོད། མི་འདོད་པའི་རྐྱེན་ངན་ཚུ་ནམ་ར་བྱུང་རུང་ ས་གནས་ག་ཏེ་ར་ཨིན་རུང་ དེ་ཁར་གྲོགས་རམ་འབད་བར་འདི་འཕྲོ་ལས་ལྷོདཔ་མ་ཚད་ དེ་མ་ཚད་སྤྱིར་བཏང་གི་གནས་སྟངས་ཚུ་ནང་ཡང་ བཞེས་སྒོ་བཅུད་ཅན་དང་ ཉེན་སྲུང་གི་དོན་ལུ་ དུས་རྒྱུན་དུ་རྒྱབ་སྐྱོར་འབདཝ་ཨིན། བརྩོན་ཤུགས་དང་ཁྱད་རིག་ལྡན་པའི་ལས་གཡོགཔ་སྟོང་ཕྲག་ ༢༠,༠༠༠ ལྷག་ཙམ་ཅིག་གི་འགོ་འདྲེན་ཐོག་ལུ་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ རྒྱལ་ཁབ་ ༨༠ གི་ནང་དཀའ་སྡུག་ཤུགས་སྦེ་མྱོང་མི་ཚུ་ལུ་ཆ་རོགས་འབད་བའི་བསྒང་ར་ཡོདཔ་ཨིན། ༼འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ། ༢༠༡༤།༽ <br>
+འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ འཛིན་སྐྱོང་ལྷན་སྡེ་བཀོད་ཚོགས་ཀྱིས་ སྐྱོང་དོ་ཡོདཔ་དང་ དེ་ནང་འཐུས་མི་རྒྱལ་ཁབ་ ༣༦ ཡོད། བཀོད་ཚོགས་འདི་གིས་ ཟ་སྤྱོད་ལས་རིམ་གྱི་ལས་སྣ་ཚུ་ལུ་ རྒྱལ་སྤྱིའི་རྒྱབ་སྐྱོར་ལམ་སྟོན་བྱིན་ནི་དང་ ཡང་ན་ ལྟ་རྟོག་ཚུ་འབདཝ་ཨིན། ལྷག་པར་དུ་ ཡིག་ཚང་འདི་གིས་ རོམ་(Rome)ལུ་ཡོད་པའི་འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་བཟའ་འཐུང་དང་སོ་ནམ་ལས་ཁུངས་དང་ རྒྱལ་སྤྱི་སོ་ནམ་གོང་འཕེལ་མ་དངུལ་ཟེར་ ཡན་ལག་ལས་ཁུངས་ཅིག་ཡོད་མི་ གཉིས་དང་གཅིག་ཁར་ མཐུན་ཏོག་ཏོ་སྦེ་ ལཱ་འབདཝ་ཨིན། ལས་ཁུངས་འདི་གི་བཀོད་ཁྱབ་མདོ་ཆེན་འདི་ ལོ་ ༥ གི་དོན་ལུ་ བཙག་འཐུ་འབད་དེ་ཡོད་མི་འདི་གི་འགོ་དྲེན་ཐོག་ལུ་ ཕྱག་ལཱ་ཚུ་མཛདཔ་ཨིན། དེ་གི་འགན་ཁག་ངོ་མ་ར་ ལས་ཁུངས་ཀྱི་བདག་སྐྱོང་སྒྲིང་སྒྲི་སྦེ་འགོ་འདྲེན་འཐབ་ནི་དང་ གཞན་ཡང་ ལས་འགུལ་དང་ལས་རིམ་ཚུ་གུར་ ཕྱག་ལཱ་གནང་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་ཁུངས་འདི་ལུ་བཀོད་ཁྱབ་མདོ་ཆེན་འོགམ་གཅིག་དང་ བཀོད་ཁྱབ་མདོ་ཆེན་ཞིབ་རོགས་བཞི་ཡོདཔ་ཨིན། ལས་སྡེ་དེ་ལུ་ མ་དངུལ་རྒྱབ་སྐྱོར་འདི་ ཆ་ཚང་ར་ ཁས་བླངས་ཀྱི་ཐོག་ལུ་ཞལ་འདེབས་ལེན་དོ་ཡོདཔ་ཨིན། དེ་མ་ཚད་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་གྱིས ་གཞུང་དང་རྒྱལ་སྤྱིའི་གཞུང་མིན་ལས་སྡེ་དང་ལས་ཁུངས་ཁག་མ་འདྲཝ་ ༩༠༠ ལྷག་ཙམ་ཅིག་ཡོད་མི་དང་གཅིག་ཁར་མཉམ་འབྲེལ་འབད་དེ་ བཟའ་འཐུང་གི་གྲོགས་རམ་དང་དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་ཚུ་བསལཝ་ཨིན།<br>
+འབྲུག་རྒྱལ་ཁབ་ནང་ འཛམ་གླིང་ཟ་སྤྱོད་ཀྱི་ལས་རིམ་འདི་ སྤྱི་ལོ་ ༡༩༧༦ ལུ་འགོ་བཙུགས་ནུག། ལས་རིམ་དེ་གི་རྒྱབ་སྐྱོར་གྱི་གཞི་འགྱམ་ངོ་མ་ར་ སློབ་གྲྭ་ཚུ་ནང་བཞེས་སྒོ་བྱིན་ནི་འདི་ཨིནམ་དང་ སློབ་ཕྲུག་སྟོང་ཕྲག་ལས་བཅས་ཏེ་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་གིས་ཕན་ཐོགས་ཏེ་ཡོདཔ་ཨིན། གཞན་ཡང་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་གྱིས་ ཟམ་རྐྱབ་ནི་དང་། གསོ་བ། སོ་ནམ་གྱི་ལས་སྣ་ཚུ་ནང་ཡང་ གྲོགས་རམ་འབད་དེ་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ནང་ གློ་བུར་བཞེས་སྒོ་བསག་མཛོད་ཡང་གཞི་བཙུགས་འབད་དེ་ཡོདཔ་ཨིནམ་མ་ཚད་ མཐའ་ཟུར་གཡུས་ཚན་གྱི་སློབ་ཕྲུག་ཨ་ལུ་ཚུ་ལུ་ དམིགས་བསལ་གྱི་ལྟ་རྟོག་འབད་དེ་ བཞེས་སྒོ་བཅུད་ཅན་བྱིན་ནི་གི་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨། ཤོག་གྲངས་ ༡༨༣།༽</big>
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
@@ -60,3 +66,4 @@
 # Shaheen, I. (2013). South Asian Association for Regional Cooperation (SAARC): Its Role, Hurdles and Prospects. ResearchGate , 15 (6), 1.
 # UNDP Bhutan. Retrieved from https://www.undp.org/content/dam/bhutan/UNDP%20Bhutan%20Brochure.pdf
 # Sustainable Development Goals (UNDP). Retrieved from http://www.undp.org/content/dam/undp/library/corporate/brochure/SDGs_Booklet_Web_En.pdf
+# World Food Programme. (2014). Retrieved from http://www.unaids.org/sites/default/files/media_asset/WFP_en.pdf
