--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -54,6 +54,15 @@
 འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་ འཛིན་སྐྱོང་ལྷན་སྡེ་བཀོད་ཚོགས་ཀྱིས་ སྐྱོང་དོ་ཡོདཔ་དང་ དེ་ནང་འཐུས་མི་རྒྱལ་ཁབ་ ༣༦ ཡོད། བཀོད་ཚོགས་འདི་གིས་ ཟ་སྤྱོད་ལས་རིམ་གྱི་ལས་སྣ་ཚུ་ལུ་ རྒྱལ་སྤྱིའི་རྒྱབ་སྐྱོར་ལམ་སྟོན་བྱིན་ནི་དང་ ཡང་ན་ ལྟ་རྟོག་ཚུ་འབདཝ་ཨིན། ལྷག་པར་དུ་ ཡིག་ཚང་འདི་གིས་ རོམ་(Rome)ལུ་ཡོད་པའི་འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་བཟའ་འཐུང་དང་སོ་ནམ་ལས་ཁུངས་དང་ རྒྱལ་སྤྱི་སོ་ནམ་གོང་འཕེལ་མ་དངུལ་ཟེར་ ཡན་ལག་ལས་ཁུངས་ཅིག་ཡོད་མི་ གཉིས་དང་གཅིག་ཁར་ མཐུན་ཏོག་ཏོ་སྦེ་ ལཱ་འབདཝ་ཨིན། ལས་ཁུངས་འདི་གི་བཀོད་ཁྱབ་མདོ་ཆེན་འདི་ ལོ་ ༥ གི་དོན་ལུ་ བཙག་འཐུ་འབད་དེ་ཡོད་མི་འདི་གི་འགོ་དྲེན་ཐོག་ལུ་ ཕྱག་ལཱ་ཚུ་མཛདཔ་ཨིན། དེ་གི་འགན་ཁག་ངོ་མ་ར་ ལས་ཁུངས་ཀྱི་བདག་སྐྱོང་སྒྲིང་སྒྲི་སྦེ་འགོ་འདྲེན་འཐབ་ནི་དང་ གཞན་ཡང་ ལས་འགུལ་དང་ལས་རིམ་ཚུ་གུར་ ཕྱག་ལཱ་གནང་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་ཁུངས་འདི་ལུ་བཀོད་ཁྱབ་མདོ་ཆེན་འོགམ་གཅིག་དང་ བཀོད་ཁྱབ་མདོ་ཆེན་ཞིབ་རོགས་བཞི་ཡོདཔ་ཨིན། ལས་སྡེ་དེ་ལུ་ མ་དངུལ་རྒྱབ་སྐྱོར་འདི་ ཆ་ཚང་ར་ ཁས་བླངས་ཀྱི་ཐོག་ལུ་ཞལ་འདེབས་ལེན་དོ་ཡོདཔ་ཨིན། དེ་མ་ཚད་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་གྱིས ་གཞུང་དང་རྒྱལ་སྤྱིའི་གཞུང་མིན་ལས་སྡེ་དང་ལས་ཁུངས་ཁག་མ་འདྲཝ་ ༩༠༠ ལྷག་ཙམ་ཅིག་ཡོད་མི་དང་གཅིག་ཁར་མཉམ་འབྲེལ་འབད་དེ་ བཟའ་འཐུང་གི་གྲོགས་རམ་དང་དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་ཚུ་བསལཝ་ཨིན།<br>
 འབྲུག་རྒྱལ་ཁབ་ནང་ འཛམ་གླིང་ཟ་སྤྱོད་ཀྱི་ལས་རིམ་འདི་ སྤྱི་ལོ་ ༡༩༧༦ ལུ་འགོ་བཙུགས་ནུག། ལས་རིམ་དེ་གི་རྒྱབ་སྐྱོར་གྱི་གཞི་འགྱམ་ངོ་མ་ར་ སློབ་གྲྭ་ཚུ་ནང་བཞེས་སྒོ་བྱིན་ནི་འདི་ཨིནམ་དང་ སློབ་ཕྲུག་སྟོང་ཕྲག་ལས་བཅས་ཏེ་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་འདི་གིས་ཕན་ཐོགས་ཏེ་ཡོདཔ་ཨིན། གཞན་ཡང་ འཛམ་གླིང་ཟ་སྤྱོད་ལས་རིམ་གྱིས་ ཟམ་རྐྱབ་ནི་དང་། གསོ་བ། སོ་ནམ་གྱི་ལས་སྣ་ཚུ་ནང་ཡང་ གྲོགས་རམ་འབད་དེ་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ནང་ གློ་བུར་བཞེས་སྒོ་བསག་མཛོད་ཡང་གཞི་བཙུགས་འབད་དེ་ཡོདཔ་ཨིནམ་མ་ཚད་ མཐའ་ཟུར་གཡུས་ཚན་གྱི་སློབ་ཕྲུག་ཨ་ལུ་ཚུ་ལུ་ དམིགས་བསལ་གྱི་ལྟ་རྟོག་འབད་དེ་ བཞེས་སྒོ་བཅུད་ཅན་བྱིན་ནི་གི་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨། ཤོག་གྲངས་ ༡༨༣།༽</big>
 
+=== ཕྱི་འབྲེལ་གྱི་མཐུན་ལམ། === 
+<big>༉ འབྲུག་གི་བྱུང་རབས་དང་ས་ཆའི་ཆགས་ཐངས།་ དེ་ལས་ ལུང་ཕྱོགས་དང་རྒྱལ་སྤྱིའི་གནས་སྟངས་ ཀྱི་གོང་འཕེལ་ཚུ་ རྒྱུན་མ་ཆད་པར་འགྱོ་མི་འདི་གིས་ ཕྱི་འབྲེལ་ཐབས་བྱུས་བརྟན་བརྟན་ཅིག་བཟོཝ་ཨིན། ཁྱིམ་ཚང་རྒྱལ་ཁབ་ཚུ་དང་ རྒྱ་ཆེ་བར་འཛམ་གླིང་རྒྱལ་ཁབ་ཚུ་དང་གཅིག་ཁར་འབྲེལ་བ་འཐབ་པའི་སྐབས་ལུ་ རྒྱལ་ཁབ་ཀྱི་ཉེན་སྲུང་དང་རང་དབང་རང་བཙན། སྲུང་སྐྱོབ། གོང་འཕེལ་གྱི་ཕྱག་ལཱ་གནངམ་ད་ལུ་ ཕྱི་འབྲེལ་ཐབས་བྱུས་འདི་ ངེས་པར་མཁོ་བའི་ལག་ཆ་ཅིག་ཨིན། ད་རེས་ཀྱི་དུས་ལུ་ འབྲུག་རྒྱལ་ཁབ་འདི་ ག་ནི་བ་སྐྱིད་ཏོང་ཏོ་དང་དགའ་ལྡན་ལྷ་ཡུལ་བཟུམ་ཡོད་པའི་རྒྱལ་ཁབ་མཇུག་ཨིནམ་སྦེ་བཤད་སྲོལ་ཡོད་མི་འདི་ ངོ་མ་ར་ས་གནས་ཀྱི་ཆགས་ཐངས་ལུ་བརྟེན་ཏེ་ཨིན།</big> (Wangchuk, 2008, p166). <big>དུས་རབས་ ༡༧ པའི་ནང་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱིས་ རྒྱལ་ཁབ་གཅིག་གྱུར་མཛད་གནང་པའི་ཤུལ་ལས་ འབྲུག་རྒྱལ་ཁབ་ཀྱིས་ ཆོས་སྡེའི་མཐུན་འབྲེལ་ཚུ་ བལ་པོ་དང་ལ་དྭགས། སི་ཀིམ་ཚུ་དང་གཅིག་ཁར་བཟོ་ནུག། འབྲུག་རྒྱལ་ཁབ་ནང་ ཕྱི་འབྲེལ་གྱི་མི་ངོ་འགོ་དང་པ་ པོར་བཅུ་གེལ་ལས་ཨིན་མི་ ཇི་སུའིསཊི་ ཨེསི་ཊེ་ཝའོ་</big>  Estevao Cacella <big>དང་</big> Joao Cabral <big>གཉིས་འོངས་ནུག། དེ་བསྒང་ཞབས་དྲུང་གིས་ ཁོང་གཉིས་ལུ་ འབྲུག་རྒྱལ་ཁབ་ནང་ གཞིས་གཅག་དགོ་པའི་རེ་སྐུལ་ཞུ་བའི་ལོ་རྒྱུས་ཚུ་ཡོདཔ་ཨིན། དེ་ལས་ རིམ་པ་བཞིན་དུ་ དུས་རབས་ ༡༨ པའི་ནང་ རྒྱ་གར་རྒྱལ་ཁབ་འདི་ ཕྱི་གླིངཔ་ག་མངའ་འོག་ལུ་སྡོད་པའི་རིང་ ཕྱི་གླིངཔ་ཚུ་གིས་ དབང་ཚད་རྒྱ་སྐྱེད་གཏང་ནི་ལུ་དམིགས་ཏེ་ རྒྱ་གར་རྒྱལ་ཁབ་ཀྱི་མཐའ་འཁོར་ལུ་ཡོད་པའི་རྒྱལ་ཁབ་ཚུ་དང་ འབྲེལ་བ་འཐབ་ནི་འགོ་བཙུགས་པའི་ཤུལ་ལུ་ འབྲུག་རྒྱལ་ཁབ་དང་གཅིག་ཁར་ སྟབས་མ་བདེཝ་ལེ་ཤ་ཐོན་ནུག། དེ་བསྒང་ རྒྱ་གར་ལུ་ཡོད་པའི་ཕྱི་གླིངཔ་གཞུང་དང་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་བར་ན་ འཐུན་འབྲེལ་གྱི་ཆིངས་ཡིག་ སྤུ་ན་ཁའི་ཆིངས་ཡིག་</big> (The Treaty of Punakha) <big>འདི་ སྤྱི་ལོ་ ༡༩༡༠ སྤྱི་ཟླ་ ༡ སྤྱི་ཚེས་ ༨ ལུ་བཟོ་བའི་ཤུལ་ལས་ དཀའ་ངལ་ལེ་ཤ་ཞི་ཡོདཔ་ཨིན།</big> (Phuntsho, 2013, p. 237)<br>
+<big>དེ་ལས་ ལས་རིམ་པ་བཞིན་དུ་ རྒྱལཔོ་རིམ་བྱོན་གྱིས་ ཕྱི་ནང་གི་འབྲེལ་བ་སྔར་ལས་ལྷག་སྟེ་ གོང་འཕེལ་གཏང་ནི་ལུ་བརྩོན་ནུག། འབྲུག་རྒྱལ་གཉིས་པ་ འཇིགས་མེད་དབངཕྱུག་མཆོག་གིས་ རྒྱ་གར་རང་བཙན་གྱི་གཞུང་གསརཔ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༤༩ ལུ་ རྒྱ་འབྲུག་མཐུན་འབྲེལ་གྱི་ཆིངས་ཡིག་བཞེངས་ཐོག་ལས་ མཐུན་འབྲེལ་གྱི་སྒོ་ཕྱེས་གནང་ནུག། འབྲུག་རྒྱལ་གསུམ་པ་ མི་དབང་འཇིག་མེད་རྡོ་རྗེ་དབང་ཕྱུག་མཆོག་གིས་ རིམ་པ་བཞིན་དུ་ ཕྱིའི་རྒྱལ་ཁབ་ཚུ་དང་མཇལ་འཕྲད་མཛད་ནི་ འགོ་བཙུགས་ཡོདཔ་ལས་ འདི་གིས་ སྲོལ་རྒྱུན་མི་ཉམས་རྒྱུན་སྐྱོང་དང་ འགྱུར་བ་མེད་པའི་མཐའ་སྐོར་གནས་སྟངས་བདག་འཛིན་འཐབ་ནི་ལུ་ཕན་ཐོགས་པའི་ཁར་ མི་སྡེ་དང་དཔལ་འབྱོར་གོང་འཕེལ་གྱི་ལམ་ལུ་བཀོད་ཡོདཔ་ཨིན། དེ་མ་ཚད་ སྤྱི་ལོ་ ༡༩༦༨ ལུ་གཞི་བཙུགས་འབད་མི་གོང་འཕེལ་ལྷན་སྡེ་འདི་ སྤྱི་ལོ་ ༡༩༧༠ ལུ་ཕྱི་འབྲེལ་ལས་ཁུངས་ལུ་ བསྒྱུར་བཅོས་འབད་ཡོདཔ་ཨིན། དེའི་ཤུལ་ལས་རྐྱངམ་གཅིག་ ད་ལྟོ་ཡོད་པའི་ཕྱི་འབྲེལ་ལྷན་ཁག་ལུ་ བསྒྱུར་ཡོདཔ་དང་ ལྷན་ཁག་འདི་གིས་ ཕྱི་འབྲེལ་གྱི་ལས་སྣ་ཚུ་འབད་དགོཔ་སྦེ་འགན་ཁག་བཀལ་ནུག། འབྲུག་རྒྱལ་ཁབ་འདི་ ཐོན་སྐྱེད་ཚད་ཅིག་ལས་བརྒལ་མེདཔ་ལས་ རྒྱལ་ཡོངས་ཀྱི་དམིགས་ཡུལ་དང་ཁེ་ཕན་ཚུ་ག་ར་ ཕྱི་འབྲེལ་ཐབས་བྱུས་ལུ་རག་ལསཔ་ཨིན། འབྲུག་གི་ཕྱི་འབྲེལ་སྲིད་བྱུས་ཀྱི་་གཞི་རྩ་ངོ་མ་ར་ རྒྱལ་ཁབ་རང་དབང་རང་བཙན་བཞག་ནི་དང་ ས་ཁོངས་གཅིག་སྒྲིལ་སྦེ་གནས་ནི་ཚུ་ཨིན། འ་ནཱི་དམིགས་ཡུལ་ཚུ་འགྲུབ་ནི་འདི་གཙོ་བོ་ར་ ཕྱིའི་རྒྱལ་ཁབ་ཚུ་དང་མཐུན་འབྲེལ་ལེགས་ཤོམ་བཞག་སྟེ་ གཞན་རྒྱལ་ཁབ་དང་གཅིག་ཁར་ གཅིག་འབྲེལ་འབད་དེ་ རྒྱལ་སྤྱིའི་གནས་སྟངས་བརྟན་ཏོག་ཏོ་དང་ ཞི་བདེ་བཟོ་ནི་ལུ་རག་ལསཔ་ཨིན། དེ་འབདཝ་ལས་ འབྲུག་གི་ཕྱི་འབྲེལ་ཐབས་བྱུས་འདི་ ཐབས་ལམ་ ༣ གྱི་ཐོག་ལས་བཤད་པ་རྐྱབ་སྟེ་ཡོདཔ་ཨིན། དེ་ཡང་ ༡༽ ཟུང་ཕྱོགས། ༢༽ མང་ཕྱོགས། ༣༽ ལུང་ཕྱོགས་ཚུ་ཨིན། <br>
+འབྲུག་རྒྱལ་ཁབ་འདི་ ཕྱིའི་རྒྱལ་ཁབ་དང་འབྲེལ་བ་འཐབ་ནི་འགོ་བཙུགས་པའི་ཤུལ་ལས་ ཕྱི་འབྲེལ་ཐབས་བྱུས་ཀྱི་སྲིད་བྱུས་འདི་གཙོ་བོ་ར་ གཞུང་རང་བཙན་སྒྲིང་སྒྲི་བཞག་སྟེ་ སྲིད་དང་དཔལ་འབྱོར་ལུ་ཕན་ཐབས་འབད་ནི་འདི་ཨིན། ཟུང་ཕྱོགས་མཐུན་འབྲེལ་གྱི་སླ་ལས་ རྒྱ་གར་རྒྱལ་ཁབ་དང་གཅིག་ཁར་མཛའ་འབྲེལ་འདི་ ཆབ་སྲིད་དང་དཔལ་འབྱོར་གཉིས་ཀྱི་ཐད་ལུ་ ཁག་ཆེ་ཏོག་ཏོ་ཅིག་ཨིན། སྤྱི་ལོ་ ༡༩༦༨ ཀྱི་ལོ་ལུ་ རྒྱ་གར་གཞུང་དང་གཅིག་ཁར་ ཕྱི་འབྲེལ་སྲིད་སྐྱོང་གི་མཐུན་འབྲེལ་བཟོ་ཡོདཔ་དང་ རྒྱ་གར་གཞུངགིས་ འབྲུག་གི་ལོ་ལྔའི་འཆར་གཞི་འགོ་བཙུགས་མི་འགོ་བཟུང་སྟེ་ རྒྱབ་སྐྱོར་འབད་བཞིན་དུ་ཡོདཔ་ཨིན། ཉེ་འདབས་ལུ་ཡོད་པའི་རྒྱལ་ཁབ་ ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་ཟུང་འབྲེལ་ཚོགས་པའི་འཐུས་མི་ག་ར་དང་གཅིག་ཁར་ ཕྱི་འབྲེལ་སྲིད་སྐྱོང་གི་མཐུན་འབྲེལ་ཡོདཔ་ཨིན། བང་ལ་དེཤ་དང་གཅིག་ཁར་ སྲིད་སྐྱོང་གི་མཐུན་འབྲེལ་འདི་ སྤྱི་ལོ་ ༡༩༧༣ ལུ་ གཞི་བཙུགས་འབད་ཡོདཔ་དང་ ནེ་པཱལ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༣ ལུ། མཱལ་དིབསི་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༤ ལུ། དེ་ལས་ སི་རི་ལང་ཀ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༧ ལུ། པ་ཀིསི་ཏཱན་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༨ ལུ་བཟོ་ཡོདཔ་དང་ ཨཕ་ག་ནིསི་ཏཱན་དང་གཅིག་ཁར་ ༢༠༡༠ ལུ་བཟོ་ནུག། <br>
+སྤྱི་ལོ་ ༡༩༨༠ གི་ཤུལ་ལས་ ཚོང་འབྲེལ་དང་གོང་འཕེལ་གྱི་མཐུན་འབྲེལ་རྒྱ་སྐྱེད་གཏང་ནིའི་དོན་ལུ་ ཤར་དང་བྱང་ཤར་ཨེ་ཤི་ཡའི་ལུང་ཕྱོགས་ནང་ མཐུན་འབྲེལ་གྱི་ལཱ་འབད་ནི་ལུ་གཙོ་བོར་བཏོན་ནུག། ཇ་པཱན་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༦ ལུ་ ཕྱི་འབྲེལ་གྱི་མཐུན་ལམ་བཟོ་ཡོདཔ་དང་ ལྷོ་ཀོ་རི་ཡ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༧ ལུ། ཐའི་ལེནཌེ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༩༨༩ ལུ། སིང་ག་པོར་དང་གཅིག་ཁར་ ༢༠༠༢ ལུ། ཨིན་ཌོ་ནེ་ཤི་ཡ་དང་གཅིག་ཁར་ ༢༠༡༡ ལུ། མོང་གོ་ལི་ཡ་དང་ཝེཊ་ནམ་ མ་ཡེན་མཱར་གསུམ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༢ ལུ་བཟོ་ནུག། ནུབ་ཨེ་ཤི་ཡའི་ལུང་ཕྱོགས་ནང་ ཀུ་ཝེཊ་དང་ གཅིག་ཁར་སྤྱི་ལོ་ ༡༩༨༣ ལུ། བཱ་རེའིན་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༡༩༩༢ ལུ། ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨི་མི་རེཊ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༢ ལུ། ཨར་མི་ནི་ཡ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༢ ལུ། ཊར་ཀི་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༢ ལུ། ཀ་ཛསི་ཏཱན་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༢ ལུ། ཨ་ཛར་བཱའི་ཇཱན་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༣ ལུ། ཨོ་མཱན་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༣ ལུ། ཨི་ཛེ་རེལ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༢༠ ལུ་གཞི་བཙུགས་འབད་ནུག། <br>
+ཡུ་རོབ་ལུང་ཕྱོགས་ནང་ ཡུ་རོ་པེན་ཡུ་ནེན་གྱི་ ནི་དེར་ལེནཌ་དང་ ཌེན་མརཀ། སུའི་ཌེན། སུའི་ཛར་ལེནཌ། ནོར་ཝེ་ཚུ་དང་གཅིག་ཁར་ ཕྱི་འབྲེལ་སྲིད་སྐྱོང་གི་མཐུན་འབྲེལ་ སྤྱི་ལོ་ ༡༩༨༥ ལུ་བཟོ་ཡོདཔ་དང་། ཕིན་ལེནཌ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༡༩༨༦ ལུ། ཨསི་ཊི་རི་ཡ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༡༩༨༩ ལུ། བེལ་ཇི་ཡམ་དང་གཅིག་ཁར་ ༢༠༠༩ ལུ། ཨིསི་པེན། ལག་ཛེམ་བཱརཀ། ཅེཀ་རི་པབ་ལིག། སར་བི་ཡ་ཚུ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༡ ལུ། ཨན་དོ་ར་ས། ས་ལུ་ཝ་ཀི་ཡ། སུ་ལོ་ཝ་ནི་ཡ། པོ་ལེནཌ་ཚུ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༢  ལུ། དེ་ལས་ ཇཱར་མ་ནི་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༢༠ ལུ་བཟོ་ནུག། ཨེ་མི་རི་ཀའི་ལུང་ཕྱོགས་ནང་ ཀེ་ན་ཌ་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༠༣ ལུ། བརཱ་ཟིལ་དང་གཅིག་ཁར་ ༢༠༠༩ ལུ། ཀིའུ་བཱ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༡ ལུ། ཨར་ཇིན་ཊི་ན། ཀོསི་ཊ་རི་ཀ། ཀོ་ལེམ་བི་ཡ་ཚུ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༡༢ ལུ་བཟོ་ནུག། ཨཕ་རི་ཀའི་ལུང་ཕྱོགས་ནང་ མོ་རོ་ཀོ་དང་ མའུ་རི་ཊི་ཡསི། ཨིསི་ཝ་ཊི་ནི། ཨི་ཇིབཊི་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༢ ལུ་བཟོ་ནུག། ཨོ་ཤི་ནི་ཡ་ལུང་ཕྱོགས་ནང་ ཨསི་ཊ་ལི་ཡ་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༢༠༠༢ ལུ་དང་། ཕི་ཇི་དང་གཅིག་ཁར་སྤྱི་ལོ་ ༢༠༡༡ ལུ་བཟོ་ནུག། <br>
+ད་ལྟོ་ འབྲུག་དང་གཅིག་ཁར་ ཕྱི་འབྲེལ་སྲིད་སྐྱོང་གི་མཐུན་འབྲེལ་རྒྱལ་ཁབ་ ༥༤ དང་ ཡུ་རོ་པེན་ཡུ་ནེན་དང་གཅིག་ཁར་ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ ༡༤ གི་ཆེ་མཐོང་དོན་གཅོད་ཀྱི་ཡིག་ཚང་ཚུ་ འབྲུག་ལུ་ཡོདཔ་མ་ཚད་ འབྲུག་གི་ཆེ་མཐོང་ཡིག་ཚང་ཡང་ རྒྱལ་ཁབ་ ༡༤ ནང་ཡོདཔ་ཨིན། གཞན་ཡང་ ཐའི་ལེནཌེ་གི་ཆེ་མཐོང་དོན་གཅོདཔ་ཡིག་ཚང་དང། ཇའི་ཀ་དང་ཀོའི་ཀ། ཨསི་ཊི་རི་ཡའི་འབྲེལ་མཐུན་ཡིག་ཚང་། འབྲུག་ཀེ་ན་ཌ་གཞི་ཚོགས། ནེ་དར་ལེནཌ་གོང་འཕེལ་ལས་ཁུངས། བུ་ཊཱན་ཚོགས་པ། ཧེལ་ཝི་ཊསི། ཨསི་ཊེ་ལི་ཡའི་ཁས་བླངས་ལས་ཆིམ། འབྲུག་གཞི་རྟེན་གྱི་ཡིག་ཚང་ཚུ་ཡང་ འབྲུག་ལུ་ཡོདཔ་ཨིན། ད་རེས་ འབྲུག་རྒྱལ་ཁབ་ཀྱིས་ དཔལ་འབྱོར་དང་སྲིད་སྐྱོང་ནུས་པ་ཆེ་བའི་རྒྱལ་ཁབ་ཚུ་དང་ དོན་ལྡན་གྱི་ཐོག་ལས་འབྲེལ་བ་འཐབ་ཨིན། <br>
+འབྲུག་འདི་སྐོབས་ཚུད་ཅན་གྱི་རྒྱལ་ཁབ་ཅིག་འབདཝ་ལས་ མང་ཕྱོགས་མཐུན་འབྲེལ་ཡང་ ཕྱི་འབྲེལ་སྲིད་བྱུས་ལུ་ གལ་ཅན་ཅིག་ཨིན། འབྲུག་གིས་ མང་ཕྱོགས་ལས་ཁུངས་འགོ་དང་པ་ ཀོ་ལོམ་བོ་པཱལན་ནང་ སྤྱི་ལོ་ ༡༩༦༢ ལུ་འཛུལ་ཞུགས་འབད་ནུག། འ་ནཱི་ལས་ཁུངས་ནང་ འཛུལ་ཞུགས་འབད་བའི་ཤུལ་ལས་ འབྲུག་གིས་ དགོས་མཁོ་ཆེ་བའི་བཟོ་རིག་དང་དཔལ་འབྱོར་གྱི་གྲོགས་རམ་ལེ་ཤ་ལེན་ཚུགས་ཡོདཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་ཀྱིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ནང་ སྤྱི་ལོ་༡༩༧༡ ལུ་ འཛུལ་ཞུགས་འབད་ཚུགས་མི་འདི་ མང་ཕྱོགས་མཐུན་འབྲེལ་གྱི་ལམ་འགྲུལ་ནང་ གལ་ཆེ་ཤོས་ཅིག་ཨིན། ད་ལྟོ་ འབྲུག་རྒྱལ་ཁབ་འདི་ རྒྱལ་སྤྱི་དང་ལུང་ཕྱོགས་ཀྱི་ལས་ཁུངས་ ༩༥ ལྷག་ཙམ་ཅིག་གི་འཐུས་མི་ཨིན། དེ་མ་ཚད་ ནཱོན་ཨེ་ལའིན་མེནཊ་༼ནམ༽ གི་ ལས་ཁུངས་ནང་སྤྱི་ལོ་ ༡༩༧༣ ལུ་འཛུལ་ཞུགས་འབད་ནུག། གཞན་ཡང་ སྡེ་ཚན་ ༧༧ ༼ཇི་ ༧༧༽ ཨེལ་གྲི་སི་</big> ༼LDC༽ <big>སྐོབས་ཚུད་ཀྱི་གོང་འཕེལ་རྒྱལ་ཁབ་ ༼ཨེལ་ཨེལ་ཌི་སི་</big> (LLDC)༽ <big>ཡང་ཨིན། འདི་བཟུམ་སྦེ་ འབྲུག་རྒྱལ་ཁབ་ནང་ ཡུ་ཨེན་ཌི་པི་དང་ཡུ་ནི་སེཕ། གྲབ་ལུ་ཨེཕ་པི། གྲབ་ལུ་ཨེཆ་ཨོ། ཨེཕ་ཨེ་ཨོ། ཡུ་ཨེན་ཨེཕ་པི་ཨེ། ཨུ་ཨེན་ཨོ་དྲི་སི། ཌབ་ལུ་ཌབ་ལུ་ཨེཕ། ཨའི་ཀའོ། འཛམ་གླིང་དངུལ་ཁང་ཚུ་གི་ཡིག་ཚང་ཡོདཔ་ཨིན། ལུང་ཕྱོགས་ཀྱི་གནས་ཚད་ནང་ ཀོ་ལོམ་བོ་ནང་འཐུས་མི་སྦེ་ ༡༩༦༢ ལུ་འཛུལ་ཞུགས་འབད་ཡོདཔ་མ་ཚད་ ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་ནང་ སྤྱི་ལོ་ ༡༩༨༤ ལུ། བེ་ཨོཕ་བེང་གལ་</big>༼BIMSTEC༽ <big>ནང་སྤྱི་ལོ་ ༢༠༠༤ ལུ། དེ་ལས་ ཨེ་སི་ཌི་ནང་སྤྱི་ལོ་ ༢༠༠༥ ལུ་འཛུལ་ཞུགས་འབད་ནུག། འདི་བཟུམ་སྦེ་ ཨི་སི་མོཊ། ཨེ་ཕོ་ཀོ། ཨེ་བུ་ཡུ་ནང་ལུ་ཡང་ འཐུས་མི་སྦེ་འཛུལ་ཡོདཔ་དང་ སཱཀ་གོང་འཕེལ་དངུལ་ཁང་གི་ཡིག་ཚང་འབྲུག་ལུ་ཡང་ཡོདཔ་ཨིན།</big> ("Foreign Policy of the Kingdom of Bhutan", n.d.)
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
@@ -67,3 +76,5 @@
 # UNDP Bhutan. Retrieved from https://www.undp.org/content/dam/bhutan/UNDP%20Bhutan%20Brochure.pdf
 # Sustainable Development Goals (UNDP). Retrieved from http://www.undp.org/content/dam/undp/library/corporate/brochure/SDGs_Booklet_Web_En.pdf
 # World Food Programme. (2014). Retrieved from http://www.unaids.org/sites/default/files/media_asset/WFP_en.pdf
+# Foreign Policy of the Kingdom of Bhutan. Mfa.gov.bt. Retrieved 13 December 2021, from https://www.mfa.gov.bt/wp-content/uploads/2021/02/Foreign-Policy-Document.pdf.
+# Phuntsho, K. (2013). The History of Bhutan (p. 237). Random House India.
