--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -7,7 +7,23 @@
 གཞས་ཟེར་མི་འདི་ སྔར་སྲོལ་གྱི་གླུ་གཞས་ཀྱི་དབྱེ་བ་ཅིག་ཨིན། གཞས་འདི་ མང་ཤོས་ར་ རང་སའི་གཡུས་སྐད་ནང་ཡོདཔ་ཨིན། སྔོན་མ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༦༡༦ གི་ལོ་ལུ་ མགར་ས་ལུ་བྱོན་པའི་སྐོར་ལས་ཡོད་མི་ལུ་ ངོས་འཛིན་འབདཝ་ཨིན། གཞུང་སྒྲ་དང་བོད་སྒྲ་གཉིས་ཀྱི་ཁྱད་རྣམ་ཚུ་ གཞས་ནང་ཚུད་དེ་ཡོདཔ་ཨིན། གཞས་མང་ཤོས་ར་ ཝང་གཞས། ནུབ་གཞས། ལྟ་ལོ་པའི་གཞས། སྤ་རོ་པའི་གཞས་ཚུ་ཨིནམ་དང་ མགོན་གཞས་ཚུ་མང་ཤོས་ར་ ཞབས་དྲུང་བྱོན་པའི་ཤུལ་ལས་བྱུང་ཡོདཔ་ཨིན། མགོན་གཞས་ལུ་ ལིའུ་ ༢༡ ཡོདཔ་མ་ཚད་ ནུབ་གཞས་འདི་ གཞས་ཚུ་གི་སླ་ལས་ རིང་ཤོས་ཅིག་ཨིན། ཨ་ལོ་འདི་ ཀུར་སྟོད་པའི་ཁ་སྐད་ནང་ཡོདཔ་མ་ཚད་ ཞེ་ཁྲོ་ཡར་མཆོད་འདི་ཨ་ལོ་བཟུམ་སྦེ་ སྔར་སྲོལ་གྱི་གླུ་གཞས་ཨིན་མི་ ཀྲོང་གསར་གྱི་གཡུས་ཁར་འཐེན་སྲོལ་ཡོད། ཁོ་རེ་གཞས་འདི་ དུང་བསམ་ལུ་འཐེན་སྲོལ་ཡོདཔ་དང་ ཨུའུ་ས་འདི་ ཧཱ་ལུ་འཐེན་སྲོལ་ཡོད། དེ་བཟུམ་སྦེ་ ཁེང་ལུ་ཨོ་མོ་ཨོ་མོ་པད་ལུང་ཚུ་འཐེན་སྲོལ་ཡོད།<br>
 སྤྱི་ལོ་ ༡༩༦༠ གི་སྐོར་ཆ་ལུ་ རིག་གསར་གྱི་གླུ་གཞས་ཚུ་བྱུང་བའི་ཤུལ་ལས་ རིམ་པ་བཞིན་དུ་ སྤྲོ་སྟོན་གྱི་ལམ་སྲོལ་ཅིག་ལུ་གྱུར་ཡོདཔ་ཨིན། དེ་ཡང་ ན་གཞོན་ཚུ་གིས་ སྤྲོ་བ་དང་དང་ལེན་འབད་ནི་འདི་ ཁྲོམ་ཁའི་ས་གོ་ཚུ་ནང་ ཡོངས་གྲགས་སོང་ཡོདཔ་ཨིན་རུང་ ད་རེས་འབདཝ་ད་ རྒྱལ་ཁབ་མཐའ་དབུས་མེད་པར་ རིག་གསར་གྱི་གླུ་གཞས་ལུ་ སྤྲོ་བ་སྐྱེད་མི་མང་ཤོས་ཅིག་ཡོད། རིག་གསར་གྱི་གླུ་གཞས་དང་པ་འདི་ གཞན་འདི་མི་དགོ་ཟེར་མི་ཨིནམ་དང་ དེ་ཡང་རྒྱ་གར་གྱི་གླུ་གཞས་ ས་ཡོ་ན་ར་ཟེར་མི་ལས་དཔེ་དྲངས་ཏེ་བརྩམས་བརྩམས་ཨིན། གླུ་གཞས་ཚུ་ རྫོང་ཁའི་ཚིག་གི་ཐོག་ལུ་ གསར་རྩོམ་འབད་མི་གིས་ དཔལ་ལྡན་འབྲུག་པའི་ཁ་སྐད་ རྫོང་ཁ་ཡར་རྒྱས་གཏང་ནི་ལུ་ཕན་རླབས་ཆེཝ་མ་ཚད་ ནང་པའི་རིག་གཞུང་ལྷབ་སྦྱང་འབད་ནི་ལུ་ཡང་ ཕན་ཐོགས་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༨༤ གི་ལོ་ལུ་ སེམས་རྟོགས་ཁ་རིག་གཞུང་སློབ་གྲྭའི་སློབ་ཕྲུག་སྡེ་ཚན་གཅིག་གིས་ ན་གཞོན་འཁྲབ་སྟོན་ཚོགས་པ་ཟེར་མི་ཅིག་ གཞི་བཙུགས་འབད་བའི་ཤུལ་ལུ་ སྡེ་ཚན་འདི་གིས་ རིག་གསར་གྱི་གླུ་གཞས་ཚུ་གསར་རྩོམ་འབད་དེ་ འཐེན་ནི་འགོ་བཙུགས་ནུག།</big> (Kuenga, n.d.)
 
+=== འབྲུག་གི་བཟོ་བཀོད་རིག་པ། ===
+<big>༉ འབྲུག་གི་བཟོ་བཀོད་རིག་པ་འདི་ འཛམ་གླིང་ནང་རྒྱལ་ཁབ་གཞན་ག་དང་ཡང་མ་འདྲ་བའི་ཁྱད་ཆོས་ཐུན་མོང་མ་ཡིན་པ་ཅིག་ཨིནམ་དང་ དེ་ཚུ་ཡང་ ནང་པའི་ཆོས་ཀྱི་བྱིན་རླབས་འཇུག་སྟེ་ཡོད་པའི་བཟོ་བཀོད་ཙང་ཙ་ཡོདཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་འདི་ བཟོ་བཀོད་རིག་པ་གིས་་ཕྱུགས་པའི་རྒྱལ་ཁབ་ཅིག་ཨིན་དགོ་མི་འདི་ཡང་ དུས་དང་ཕུ་དིང་ཕུ་དུས་རབས་ ༧ པའི་ནང་ལས་ར་བཞེངས་ཡོད་པའི་ལྷ་ཁང་དང་མགོན་སྡེ་ཚུ་ ད་ལྟོའི་བར་ནང་ཡང་མཇལ་ཚུགས་ནི་འདི་གིས་ཨིན། 
+བཟོ་སྐྲུན་གྱི་ལཱ་ག་ཅི་བཟུམ་ར་འབད་རུང་ ལྕགས་ཟེར་དང་ཕྱི་རྒྱལ་ལས་ཐོན་པའི་ལག་ཆ་ཚུ་ ལག་ལེན་མ་འཐབ་པར་ རང་བཞིན་གྱིས་གནས་སྐབས་བཏོན་ཏེ་ བཟོ་རིག་གི་ལཱ་ཚུ་འབད་དེ་སྡོད་ནུག། དེ་མ་ཚད་ ཁྱིམ་གྱི་ བཟོ་བཀོད་ཚུ་ཡང་ ད་རེས་ནངས་པ་བཟུམ་སྦེ་ འཆར་གཞི་ཧེ་མ་ལས་བརྩམས་ཏེ་མེན་པར་ བཟོ་བོ་གི་ལཱ་ཡོད་ཚད་ཅིགཔ་ རང་སོའི་བློ་རིག་ཐོག་ལས་འབད་སྡོད་ནུག། བཟོ་རྣམ་ཚུ་ཡང་ རང་བཞིན་སའི་ཆགས་ཚུལ་ལྟར་དུ་སྦེཡོདཔ་མ་ཚད་ གནམ་གཤིས་གནས་སྟངས་དང་འཁྲིལ་སྟེ་ ཁྱིམ་དང་ལྷ་ཁང་ རྫོང་གཞི་ཚུ་ཡང་སོ་སོ་སྦེ་རྐྱབ་སྟེ་སྡོད་ནུག།</big> (Wangchuk, 2016)<br>
+==== རྫོང་གི་བཟོ་བཀོད་རིག་པ། ====
+<big>རྫོང་གཞིས་ཚུ་མང་ཤོས་ར་ རྡོ་དང་ཤིང་ དེ་ལས་ འདམ་ཚུ་གིས་རྐྱབ་དོ་ཡོདཔ་ཨིན། དང་ཕུའི་རྫོང་ཚུ་ལུ་ འཛུལ་སྒོ་གཅིག་ལས་མེདཔ་ཨིན། རྫོང་ག་ར་ལུ་ དབུ་རྩེ་ཡོདཔ་མ་ཚད་ མཐའ་སྐོར་ལུ་ རྡོ་གཅལ་་ཡོདཔ་ཨིན། རྫོང་ཚུ་གི་་གྱང་ཚུ་ ཁ་ནང་ན་བལྟ་སྟེ་་ཧལ་ཏེ་ཡོདཔ་མ་ཚད་ སྒོ་སྒྲིག་ཚུ་ཚོད་གཞི་གནགཔོ་སྦེ་ཡོདཔ་ཨིན། ཁྱིམ་ཐོག་འདི་ རྒྱ་བཞི་སྦེ་བཟོ་སྟེ་ བྱི་གཞོལ་སྦེབཀབ་སྟེ་འོངམ་ཨིན། སྤྱིར་བཏང་གི་ཁྱིམ་ཚུ་ལུ་ རྒྱ་བཞི་འདི་མི་འཐོབ་ནི་ཨིན་པས། རྫོང་གི་ནང་ན་ལུ་ ཀ་ཆེན་ལེ་ཤ་འོངམ་ཨིནམ་དང་ དེ་ཚུ་ཡང་ པ་ཏྲ་རབ་འབྲིང་ཐ་སྦེ་ གཟི་བརྗིད་་ཆེ་ཏོག་ཏོ་སྦེ་བརྐོ་སྟེ་འོངམ་ཨིན།</big>
+==== འབྲུག་གི་ཁྱིམ། ====
+<big>འབྲུག་གི་ཁྱིམ་ཚུ་ རིན་གོང་ཆུང་བའི་རྩིས་ས་གིས་རྐྱབ་ཨིན་རུང་ མང་ཤོས་ར་རང་ལུགས་འབྲུག་པའི་ལུགས་སྲོལ་གྱི་ཐོག་ལུ་ རྐྱབ་མི་ཙང་ཙ་ཨིན། གཞན་ཡང་ ཤིང་ཆས་དང་འདམ་ཚུ་ ལེ་ཤ་སྦེ་ལག་ལེན་འཐབ་ཏེ་རྐྱབ་སྲོལ་ཡང་ཡོདཔ་ཨིན། དེ་ལས་ རང་སོའི་ལུང་ཕྱོགས་ཀྱི་གནམ་གཤིས་གནས་སྟངས་དང་བསྟུན་ཏེ་ འབྲུག་ཤར་ཕྱོགས་ཁ་ཐུག་ལུ་འབད་བ་ཅིན་ ཁྱིམ་ཚུ་ རྡོ་གིས་སྦེ་འབད་རྐྱབ་ཨིནམ་དང་ ས་ཁ་དམའ་ས་ཚུ་ནང་འབད་བ་ཅིན་ སྦ་དང་ཤིང་གིས་སྦེ་རྐྱབ་ཨིན།</big> 
+==== ལྷ་ཁང་དང་མགོན་པ། ====
+<big>ལྷ་ཁང་དང་མགོན་པ་ཚུ་གི་བཟོ་རྣམ་འདི་ རྫོང་དང་ཆ་འདྲ་སུ་ཅིག་ཡོད་རུང་ རྒྱའི་སྦོམ་ཚད་འདི་ ཨ་ཙི་ཅིག་ཆུང་སི་སྦེ་ཡོདཔ་ཨིན། ལྷ་ཁང་ཚུ་གི་གྱང་གི་མདོག་འདི་དཀརཔོ་དང་ མང་ཤོས་ར་ཁྱིམ་ཐོག་གུར་གསེར་ཏོག་རྟོག་བཀལ་ཏེ་འོངམ་ཨིན། ལྷ་ཁང་གི་ནང་ན་འབད་རུང་ པ་ཏྲ་ཊ་ཅན་མའི་མཆོད་བཤམ་དང་ ཀ་ཆེན་ཡ་མཚན་ཆེ་ཏོག་ཏོ་སྦེ་འོངམ་མ་ཚད་  གྱང་གུར་ནང་པའི་ལྷ་ཚོགས་ཀྱིས་ལྡེབས་རིས་ འཇའ་ཆི་ཆི་ཚུ་སྦྱར་ཏེ་འོངམ་ཨིན།</big> 
+==== ཟམ་པ། ====
+<big>འབྲུག་རྒྱལ་ཁབ་ཀྱི་སའི་ཆགས་ཚུལ་འདི་ གྱེན་ཟར་དྲགས་སྦེ་ཡོདཔ་ལས་ ཆུ་ཚུ་ཤུགས་སྦེ་འབབ་ཨིན། དེ་འབདཝ་ལས་བརྟེན་ ཟམ་པ་ཚུ་ཡང་ཧེ་མ་འབད་བ་ཅིན་ སྔར་སྲོལ་གྱི་ལུགས་ལྟར་ བ་ཟམ་རྐྱབ་སྲོལ་ཡོད་རུང་ རིམ་པ་བཞིན་དུ་དེང་སང་ཡར་རྒྱས་ཀྱི་འགྱུར་བ་དང་བསྟུན་ བཟོ་རྣམ་དང་རྒྱུ་ཆས་ཚུ་ཡང་ ལེ་ཤ་བསྒྱུར་བཅོས་འགྱོ་ཡོདཔ་ཨིན།</big>
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
 # Sharma, C. S. (2007). Echoes of Folksongs in Bhutanese Literature in English. ResearchGate. https://www.researchgate.net/publication/262726145
+# A History of Bhutan. (n.d): Class 10. Royal Education Council (REC). (Original work published 1996)
+‌# Wangchuk, D. (2016). Foundations of Bhutan History: A Concise Guide (1st ed.). Omega Traders.
+# TRADITIONAL ARCHITECTURE]. (n.d). Retrieved from http://admin.theiguides.org/Media/Documents/TRADITIONAL-ARCHITECTURE1.pdf
+# A Review on Traditional Architecture Houses in Buddhist Culture. (2017). 5(3), 113–123. http://pubs.sciepub.com/ajcea/5/3/6
