--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -36,6 +36,15 @@
 <big>རྒྱལ་རབས་ལུ་བལྟ་བ་ཅིན་ ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་འབྲུག་ལུ་སྤྱི་ལོ་ ༡༦༡༦ ལུ་ བྱོན་ཏེ་རྒྱལ་ཁབ་གཅིག་འགྱུར་མཛད་དེ་ མི་ལོ་ ༣༥ གྱི་རིང་ཆབ་སྲིད་བསྐྱངས་ཏེ་བཞུགས་ནུག། ཞབས་དྲུང་རིན་པོ་ཆེའི་འདས་ལོ་༡༦༥༡ ལས་འགོ་བཟུང་སྟེ་ མི་ལོ་ ༢༢༥ གི་རིང་ལུ་ རྒྱལ་ཁབ་ནང་དབུ་འཁྲིདཔ་སྒྲིང་སྒྲི་ཅིག་རྩ་ལས་མེད་པར་ སྟབས་མ་བདེ་བའི་རྐྱེན་ངན་གྱིས་རྒྱལ་ཁབ་འདི་ སྡུག་བསྔལ་གྱི་རང་བཞིན་ཅིག་ལུ་གྱུར་སོ་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༩༠༠ སྐོར་ཆ་ལུ་ སྲིད་དང་འབྲེལ་བའི་ལུང་ཕྱོགས་སོ་སོའི་འགོ་དཔོན་ཚུ་གི་བར་ན་ ཁ་འཆམ་མ་ཚུགས་པར་ནང་འཁྲུག་དང་དམག་འཐབ་ཀྱི་བྱ་བ་ཡང་ལེ་ཤ་བྱུང་ནུག། སྟབས་མ་བདེ་བའི་དུས་ཚོད་འདི་ཁར་ ལུང་བསྟན་གྱིས་བཀོད་དེ་གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ ག་གིས་ཡང་གླགས་འཁེལ་མ་ཚུགས་པའི་འགྲན་ཟླ་དང་བྲལ་བའི་སྟོབས་ཤུགས་ཅན་ཅིག་སྦེ་སྡོད་ནུག། རྒྱུ་མཚན་འདི་འབདཝ་ལས་ ཧཱ་དྲུང་པ་ཨོ་རྒྱན་རྡོ་རྗེ་གིས་སྤྱི་ལོ་ ༡༩༠༦ ལུ་ལྷན་རྒྱས་གཞུང་ཚོགས་ལུ་ འབྲུག་རྒྱལ་ཁབ་འདི་ནང་དབུ་ཁྲིད་སྒྲིང་སྒྲི་མེད་པའི་སྟབས་ཀྱིས་ རྒྱལ་ཁབ་ནང་བཞི་བདེ་ཀྱི་ཉིནམ་ཅིག་རྩ་ལས་མ་བྱུང་བའི་ཁར་ དམག་འཁྲུག་ལས་བརྟེན་པའི་སྡུག་བསྔལ་ཡང་ཚད་མེདཔ་ཅིག་བྱུང་ཡོད་པའི་སྐོར་ལས་ ཁ་བསལ་སྦེ་བཤད་དེ་ དུས་དེ་ལས་ཚུར་གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ འབྲུག་གཞུང་གི་ཆབ་སྲིད་སྐྱོང་བའི་བདག་པོ་སྦེ་རྒྱལ་པོའི་ཁྲི་ལུ་མངའ་སྲོལ་འབད་དགོཔ་སྦེ་ཞུ་ཡིག་ཕུལ་ནུག། དེ་ལས་ཚུར་འབྲུག་གི་དབང་ཕྱུག་བརྒྱུད་འཛིན་གྱི་རིང་ལུགས་འགོ་བཙུགས་ཡོདཔ་ལས་ རྒྱལ་ཁབ་ནང་དགའ་སྐྱིད་ཀྱི་ཉི་མ་འགྱུར་་བ་མེད་པར་ཤར་བཞིན་དུ་ར་ཡོདཔ་ཨིན།</big>  (Wangchuk, 2016)<br>
 <big>འདི་འབདཝ་ལས་ བཀའ་དྲིན་ཅན་གྱི་འབྲུག་རྒྱལ་དང་པ་ལས་འགོ་བཟུང་སྟེ་ ད་རེས་སྤྱི་ལོ་ ༢༠༢༡ ཚུན་ རྒྱལ་ཡོངས་དུས་ཆེན་ཐེངས་ ༡༡༤ བརྩི་སྲུང་ཞུ་སྟེ་ཡོདཔ་ཨིན། ང་བཅས་རའི་བཀྲིན་ཅན་གྱི་བདག་ཉིད་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་ དཔལ་མི་དབང་འཇིགས་མེད་གེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་མཆོག་གིས་ མི་སེར་ག་རའི་གོ་སྐབས་འདྲ་མཉམ་ལུ་དམིགས་ཏེ་ རྒྱལ་ཡོངས་དུས་ཆེན་འདི་ རྒྱལ་ས་ལྟེ་བ་དང་གཞན་རྫོང་ཁག་ཚུ་ནང་ལོ་སྐོར་སྦེ་བརྩི་སྲུང་ཞུཝ་ཨིནམ་དང་ འབྲུག་མི་ཕྱི་རྒྱལ་ལུ་བཞུགས་མི་ཚུ་གི་དོན་ལུ་ཡང་ གཞུང་གིས་ཟད་འགྲོ་བཏང་ཐོག་ལས་ འཁྲབ་རྩེདཔ་ཚུ་ལྟདམོ་སྟོན་པར་གཏང་དོ་ཡོདཔ་ཨིན། དེ་མ་ཚད་ ཉིནམ་འདི་ཁར་ དགའ་བའི་གླུ་ལེན་སྐྱིད་པའི་བྲོཝ་འཁྲབ་སྟེ་སྤྲོ་སྟོན་གྱི་ལས་རིམ་ སྣམ་པ་སྣ་ཚོགས་འགོ་འདྲེན་འཐབ་སྲོལ་ཡོདཔ་མ་ཚད་ རང་སོའི་ཁ་རྗེ་དབང་ཐང་ལུ་རྟེན་པའི་རྒྱན་ཤོག་གི་ལས་རིམ་ཚུ་ཡང་བརྩམས་ཏེ་ གསོལ་ར་ཡང་རྒྱས་རྒྱས་སྦེ་སྤྲོད་དོ་ཡོདཔ་ཨིན།</big> (n.d.)
  
+=== རྒྱལ་ཡོངས་ཀྱི་བྱ། ===
+<big>༉	བྱ་ཨོ་རོག་འདི་ འབྲུག་རྒྱལ་ཡོངས་ཀྱི་བྱ་ཨིན། བྱ་འདི་གི་ཁྱད་ཆོས་མཛེས་ཏོག་ཏོ་ཡོད་པའི་ཁར་ ཆོས་དང་གཅིག་ཁར་ཡང་འབྲེལ་བ་སྦོམ་ཡོད། བྱ་འདི་གིས་འབྲུག་གི་སྲུང་མ་བྱ་རོག་གདོང་ཅན་གྱི་བརྡ་མཚོན་ཡང་སྟོནམ་ཨིན། ཧེ་མ་ཞབས་དྲུང་རིན་པོ་ཆེ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་འབྲུག་ལུ་འབྱོནམ་ད་ ཆོས་སྐྱོང་སྲུང་མ་ མ་ཧཱ་ཀ་ལ་གིས་བྱ་ཨོ་རོག་ལུ་སྤྲུལ་ཏེ་ལམ་སྟོན་མཛད་གནང་ཡི་ཟེར་བཤད་སྲོལ་ཡོད་ཨིན། ང་བཅས་རའི་རྒྱལཔོ་རིམ་བྱོན་རྣམས་ཀྱི་དབུ་ཞྭ་ བྱ་རོག་གདོང་ཅན་གྱི་བཟོ་རྣམ་སྦེ་ཡོད་མི་འདི་ བྱ་འདི་ལུ་ གུས་བཀུར་དང་ འབྲུག་པའི་མི་སེར་ཚུ་ ཆོས་སྐྱོང་སྲུང་མ་ལུ་དད་དམ་གཙང་མ་ཡོད་པའི་རྟགས་ཨིན། བྱ་རོག་གདོང་ཅན་དང་ཡེ་ཤེས་མགོན་པོ་ དེ་ལས་ དཔལ་ལྡན་ལྷ་མོ་གསུམ་གྱིས་འབྲུག་གི་རྒྱལ་པོ་དང་མི་སེར་ཡོངས་སྲུང་སྐྱོབ་འབདཝ་ཨིན། <br>
+སྤྱི་ལོ་ ༡༨༨༥ ལུ་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་གིས་ ཕྱི་གླིངཔ་(བིརི་་ཊིཤ་ཨིན་ཌི་ཡ) དང་གཅིག་ཁར་ཕྱད་མདའ་རྐྱབ་པའི་སྐབས་ལུ་ བྱ་རོག་གདོང་ཅན་གྱི་དབུ་ཞྭ་བཞེས་གནང་ནུག། དེ་ལས་ འགོ་བཟུང་སྟེ་ དབང་ཕྱུག་བརྒྱུད་འཛིན་གྱི་རྒྱལ་པོ་རྣམས་ཀྱིས་ དབུ་ཞྭ་བྱ་རོག་གདོང་ཅན་གྱི་རྣམ་པ་སྦེ་ཡོད་མི་འདི་བཞེས་གནང་ནུག། བྱ་ཨོ་རོག་གསད་ནི་འདི་ འཁྲིམས་འགལ་གྱི་ལཱ་ཅིག་ཨིནམ་མ་ཚད་འབྲུག་རྒྱལ་ཁབ་ནང་བཟུམ་སྦེ་བྱ་ཨོརོག་གི་ལོ་རྒྱུས་ཆོས་དང་འབྲེལ་བ་ཡོད་ལུགས་ཚུ་ རྒྱལ་ཁབ་གཞན་གྱི་ནང་ལུ་ཡང་ཡིད་ཆེས་བསྐྱེད་དོ་ཡོདཔ་ཨིན། བྱ་ཨོ་རོག་འདི་ ལོ་ངོ་བརྒྱ་ཕྲག་ལས་བཅད་མི་ དང་ཕུའི་སྲུང་དང་གཏམ་རྒྱུད་ཚུ་ནང་ཡང་ བཤད་སྲོལ་ཡོདཔ་ཨིན། རྒྱལ་ཁབ་མང་ཤོས་ཀྱིས་བྱ་ཨོ་རོག་འདི་ ལྷོའི་ཕོ་ཉའི་་བརྡ་མཚན་ཨིནམ་སྦེ་བཤད་སྲོལ་ཡོདཔ་དང་ རྒྱ་ནག་གི་ལམ་སྲོལ་ནང་ཆརཔ་དང་རླུང་འཚུབ་འདི་བྱ་ཨོ་རོག་གི་མིག་འཕྲུལ་དང་ ལྷ་ཚུ་ཕར་དང་ཚུར་འགྲོ་འགྲུལ་འབད་བའི་བརྡ་མཚོན་སྦེ་ཆ་བཞགཔ་ཨིན། ལྷོ་ཨ་མི་རི་ཀཱའི་མི་ཚུ་གིས་བྱ་ཨོ་རོག་འདི་ ལྷ་ཨིནམ་སྦེ་ཆ་བཞགཔ་ཨིན་པས།<br>
+བྱ་ཨོ་རོག་ལུ་མཚན་རིག་གི་མིང་འདི་ ཀོར་ཝསི་ཀོ་རེཀསི་</big>(Corvus corax) <big>ཟེར་སླབ་ཨིནམ་དང་ བཟོ་རྣམ་འདི་བྱ་ཨོ་ལ་བཟུམ་སྦེ་མཐོངམ་ཨིན། བྱ་ཨོ་རོག་འདི་ ཚོས་གཞི་ནགཔ་སྦེ་དང་ མཆོ་ཏོ་སྦོམ་སྦེ་ཡོད་པའི་ཁར་ སྐད་འདི་སྦོམ་སྦེ་རྐྱབ་ཨིན་པས། སྤྱིར་བཏང་ བྱ་ཨོ་ལ་ཚུ་མཆོ་ཏོག་སྦོམ་སྦེ་བྱ་ཨོ་རོག་དང་འདྲ་སུ་ཅིག་ཡོད་རུང་ བྱ་ཨོ་རོག་གི་གཟུགས་ཀྱི་སྦོམ་ཚད་འདི་ཨིནཅི་ ༢༨ ཡོདཔ་ཨིན་པས།   བྱ་ཨོ་རོག་གི་གཤོག་སྒྲོ་འདི་ འོད་ཆེམ་ཆེ་རིངམོ་སྦེ་ཡོད་པའི་ཁར་ བྱ་ཕོ་མོ་གཉིས་ཆ་ར་ ཚོས་གཞི་ཧོནམོ་དང་གནགཔོ་སྦེ་ཡོདཔ་ཨིན།	<br>
+བྱ་འདི་ཚུ་མང་ཤོས་ར་ས་ཁ་མཐོ་སར་འཁྱམ་དོ་ཡོདཔ་ཨིནམ་དང་ གནམ་དགུན་ལུ་བྱ་འདི་ཚུ་ས་ཁ་དམའ་ས་མཐོ་ཚད་མི་ཊར་ ༢༣༠༠ གི་ས་གནས་ཚུན་ཚོདལྷོད་དོ་ཡོདཔ་ཨིན། བྱ་འདི་འབྲས་ལྗོངས་དང་ལ་དྭགས་ དེ་ལས་ འབྲུག་རྒྱལ་ཁབ་ཚུ་ནང་མཐོང་སྲོལ་ཡོདཔ་ཨིན། འབྲུག་ནུབ་ཕྱོགས་ཀྱི་ས་གནས་ དམ་མཐང་ ལྕེ་རི་ཐང་ བྱ་གོ་བེ་ གླིང་གཞི ལྕི་བི་ས་དང་ དབུས་ཕྱོགས་བུམ་ཐང་ དུར་དང་ པེ་གུ་ལ། དེ་ལས་ འབྲུག་ཤར་ཕྱོགས་སེང་གེ་རྫོང་གི་ཉེ་འདབས་ཀྱི་ས་གནས་ཚུ་ནང་གནས་ཏེ་ཡོདཔ་ཨིན། སྤྱིར་བཏང་ བྱ་ཨོ་རོག་ཚུ་མང་ཤོས་་ར་ཡ་དང་ཆ་སྦེ་མཐོངམ་མ་གཏོགས་ཁྱུ་སྦེ་དེ་ཅིག་མཐོང་ནི་མེད། གནམ་ཁར་ལྡིང་པའི་སྐབས་ལུ་ ཁ་ལྟོར་ཏེ་འཕུར་ནི་ཡོདཔ་དང་ གཤོག་སྒྲོ་འགྲོས་ཀྱིས་སྦེ་གཡབ་ནི་ཡོདཔ་ཨིན།  བྱ་འདི་ཚུ་ མང་ཤོས་ར་ཉེ་འདབས་ལུ་ སྤང་གཤོང་དང་ས་གཞི་གོ་ཡང་ཏོང་ཏོ་ཡོད་པའི་ཚལ་མ་ཚུ་ནང་འཁྱམས་ཏེ་སྡོདཔ་ཨིན།<br>
+བྱ་ཨོ་རོག་འདི་ ཤ་དང་རྩྭའི་རིགས་གཉིས་ཆ་ར་ཟ་མི་སེམས་ཅན་ཅིག་ཨིན། བྱ་འདི་ཚུ་ མང་ཤོས་ར་བམ་ཤ་དང་སེམས་ཅན་གྱི་རོ་ཚུ་ལུ་ལོངས་སྤྱད་དེ་སྡོད་དོ་ཡོདཔ་ཨིན་པས། དེ་མ་ཚད་ གདོང་སོ་ཅན་གྱི་སྲོག་ཆགས་དཔེར་ན་བྱི་ཙི་ རི་བོང་ལ་སོགས་པ་དང་ བྱའི་སྒོང་རྡོག་ལ་སོགས་པ་ཚུ་ཡང་ཟཝ་ཨིན། གཞན་ཡང་ ཤིང་འབྲས་སྟར་གོ་ལ་སོགས་པ་ཚུ་ཟཝ་ཨིན་པས། བྱ་ཨོ་རོག་གིས་ གཙོ་བོ་ར་ སེམས་ཅན་ཤི་ཤིཝ་གི་རོ་ཚུ་ལུ་ལོངས་སྤྱོདཔ་ལས་ སེམས་ཅན་ཆུང་ཀུ་ཚུ་བསད་དེ་དེམ་ཅིག་མི་ཟ། བྱ་ཆུང་ཀུ་ཚུ་སྡེ་ཚན་བཟོ་སྟེ་གནམ་ནུབ་མོ་གནང་ཁར་འཕུར་ནི་ཡོདཔ་དང་ བྱ་རྒས་ཤོས་ཚུ་མང་ཤོ་ར་ཕོ་མོ་ཟུང་སྦེ་མཐོང་སྲོལ་ཡོདཔ་དང་ས་ཁོངས་བདག་འཛིན་འཐབ་སྟེ་སྡོདཔ་ཨིན་པས།<br>
+ཨོ་རོག་གི་ཕོ་མོ་སྦྲག་ནི་འདི་ལཱ་ཁག་ཡོདཔ་ལས་ ཕོ་མོ་ག་འབད་རུང་ལྟོ་འཚོལ་ནི་གི་བློ་རིག་དང་ལྕོགས་གྲུབ་ དེ་ལས་ ཡང་རྩལ་ཚུ་ཡང་ལེགས་ཤོམ་དགོཔ་ཨིནམ་དང་ བྱ་འདི་གིས་མང་ཤོ་ར་ མི་ཚེ་གཅིག་གཅིག་ཁར་སྡོདཔ་ཨིན་པས། བྱ་འདི་གིས་ ཁོང་རའི་ཚང་ཡང་ལོ་ལེ་ཤ་གི་རིང་ལུ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་དང་ བྱ་མོ་ཚུ་གིས་ སྤྱི་ཟླ་ ༢ པ་ལས་ ཤིང་གི་ལྕུག་ཀུ་ཚུ་གིས་སྦེ་ ཚང་བཟོ་ནི་འགོ་བཙུགསཔ་མ་ཚད་ བྱ་ཕོ་ཚུ་གིས་ སྔོ་དྲེག་དང་སྐྱ་ཚུ་འབག་འོངམ་ཨིན་པས། བྱ་ཨོ་རོག་མོ་ཚུ་གིས་སྒོང་རྡོག་ ༣-༦ གི་བར་ན་ འབུད་དོ་ཡོདཔ་དང་ སྒོང་རྡོག་ཚུ་ཁུག་ནི་གི་དུས་ཚོད་འདི་ ཉིན་ཞག་ ༡༨-༢༡ ཚུན་ཚོད་འགོར་དོ་ཡོདཔ་ཨིན། བྱི་ཅུང་ཚུ་ཞག་ ༣༥-༤༢ ཀྱི་བར་ན་གཤོག་སྒྲོ་སྐྱེས་ཚརཝ་ཨིན་རུང་ དེའི་ཤུལ་ལས་ཁོ་རའི་ཕམ་གིས་ ཟླཝ་ ༦ ཚུན་གྱི་རིང་ བདག་འཛིན་འཐབ་དོ་ཡོདཔ་ཨིན་པས།
+</big>
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
@@ -48,3 +57,7 @@
 # https://www.nationalcouncil.bt/assets/uploads/docs/acts/2017/Constitution_of_Bhutan_2008.pd
 # Penjore, D., & Kinga, S. (2002). The Origin and Description of The National Flag and National Anthem of The Kingdom of Bhutan. The Centre for Bhutan Studies. Retrieved from https://www.bhutanstudies.org.bt/publicationFiles/OccasionalPublications/NationalFlag.pdf
 # A History of Bhutan 19th to 20th Century. (2018).  Course Book for Class VIII (4th ed.) Royal Education Council (REC).
+# Retrieved from National Bird - Bhutan Peaceful Tours & Treks
+# Retrieved from National symbols of Bhutan, Flag, Emblem, Animal, Bird, Flower, Tree – Little Bhutan
+# Retrieved from Common Raven: National Bird of Bhutan | Interesting Facts (vdio.com)
+# Retrieved from National Bird of Bhutan - Raven national Bird Bhutann (himalaya2000.com)
