--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -45,6 +45,11 @@
 ཨོ་རོག་གི་ཕོ་མོ་སྦྲག་ནི་འདི་ལཱ་ཁག་ཡོདཔ་ལས་ ཕོ་མོ་ག་འབད་རུང་ལྟོ་འཚོལ་ནི་གི་བློ་རིག་དང་ལྕོགས་གྲུབ་ དེ་ལས་ ཡང་རྩལ་ཚུ་ཡང་ལེགས་ཤོམ་དགོཔ་ཨིནམ་དང་ བྱ་འདི་གིས་མང་ཤོ་ར་ མི་ཚེ་གཅིག་གཅིག་ཁར་སྡོདཔ་ཨིན་པས། བྱ་འདི་གིས་ ཁོང་རའི་ཚང་ཡང་ལོ་ལེ་ཤ་གི་རིང་ལུ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་དང་ བྱ་མོ་ཚུ་གིས་ སྤྱི་ཟླ་ ༢ པ་ལས་ ཤིང་གི་ལྕུག་ཀུ་ཚུ་གིས་སྦེ་ ཚང་བཟོ་ནི་འགོ་བཙུགསཔ་མ་ཚད་ བྱ་ཕོ་ཚུ་གིས་ སྔོ་དྲེག་དང་སྐྱ་ཚུ་འབག་འོངམ་ཨིན་པས། བྱ་ཨོ་རོག་མོ་ཚུ་གིས་སྒོང་རྡོག་ ༣-༦ གི་བར་ན་ འབུད་དོ་ཡོདཔ་དང་ སྒོང་རྡོག་ཚུ་ཁུག་ནི་གི་དུས་ཚོད་འདི་ ཉིན་ཞག་ ༡༨-༢༡ ཚུན་ཚོད་འགོར་དོ་ཡོདཔ་ཨིན། བྱི་ཅུང་ཚུ་ཞག་ ༣༥-༤༢ ཀྱི་བར་ན་གཤོག་སྒྲོ་སྐྱེས་ཚརཝ་ཨིན་རུང་ དེའི་ཤུལ་ལས་ཁོ་རའི་ཕམ་གིས་ ཟླཝ་ ༦ ཚུན་གྱི་རིང་ བདག་འཛིན་འཐབ་དོ་ཡོདཔ་ཨིན་པས།
 </big>
 
+=== རྒྱལ་ཡོངས་ལས་རྟགས། ===
+<big>རྒྱལ་ཡོངས་ལས་རྟགས་འདི་ནང་ འབྲུག་གི་རྒྱལ་དར་གྱི་ཆ་ཤས་མང་ཤོས་ཅིག་ཡོདཔ་མ་ཚད་ སྒྱུ་རྩལ་དུམ་གྲ་ཅིག་སོ་སོ་ཡོདཔ་མ་གཏོགས་ ང་ཤོས་ར་ཆོས་ཀྱི་བརྡ་མཚན་ཚུ་ཡོད། ལས་རྟགས་འདི་ ཨ་ཞེ་བཀྲིས་རྡོ་རྗེ་མཆོག་གིས་སྦྱིན་བདག་མཛད་དེ་ སོག་པོ་རྒྱལ་ཁབ་ཀྱི་སྒྱུ་རྩལ་མཁནམ་ཅིག་གིས་བཟོ་བཀོད་འབད་ཡོདཔ་ཨིན། འདི་ཁར་ཡོད་པའི་རྡོ་རྗེ་རྒྱ་གྲམ་འདི་ སློབ་དཔོན་པདྨ་འབྱུང་གནས་ཀྱིས་ མ་རུང་བདུད་སྲིན་ཚུ་་དམ་ལུ་བཏགས་ནིའི་དོན་ལུ་ལག་ལེན་འཐབ་པའི་མཚོན་ཆ་ཅིག་ཨིན།</big> (Wangchuk, 2008).<br>
+<big>ལས་རྟགས་འདི་སྒོར་དབྱིབས་ཅན་གྱི་སྦུག་ལུ་ རྡོ་རྗེ་རྒྱ་གྲམ་འདི་མེ་ཏོག་པད་མའི་སྟེང་ལུ་ཡོད། འདི་གི་གཡས་གཡོན་ལུ་ འབྲུག་དཀརཔོ་ཕོ་མོ་གཉིས་ཀྱིས་སྐྱོར་ཏེ་ཡོད། ནོར་བུ་དགོས་འདོད་དཔུང་འཇོམས་འདི་ དེ་ཚུ་གི་ལྟག་ལུ་གནས་ཏེ་ཡོད། རྡོ་རྗེ་གཉིས་རྒྱ་གྲམ་འབྱུང་སའི་སྦུག་ལུ་ ནོར་བུ་གཞན་ཡང་བཞི་ཡོད། འདི་གིས་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྔར་སྲོལ་ཆོས་དང་སྲིད་གཉིས་ གསང་སྔགས་རྡོ་རྗེ་ཐེག་པའི་རྒྱུད་སྡེ་བཞི་གུར་གནས་པའི་བརྡ་ཚོན་སྟོནམ་ཨིན། མེ་ཏོག་པདྨ་འདི་ མི་གཙང་བའི་གྲིབ་པ་ཞུགས་ཏེ་མེད་བའི་རྟགས་མཚན་དང་ ནོར་བུ་དགོས་འདོད་དཔུང་འཇོམས་འདི་ འབྲུག་མི་ཚུའི་རང་དབང་རང་བཙན་ཡོད་པའི་བརྡ་མཚོན་ཨིནམ་མ་ཚད་ འབྲུག་ཕོ་མོ་གཉིསཔོ་འདི་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ཀྱི་མིང་ལུ་མཚོནམ་ཨིན། <br>
+ལས་རྟགས་འདི་ འབྲུག་གི་ཡིག་ཚང་ཚུ་ནང་ གཞུང་འབྲེལ་དུ་ལག་ལེན་འཐབ་སྲོལ་ཡོདཔ་དང་ སློབ་གྲྭ་ཁག་གི་དཔེ་ཆ་ཚུ་གུར་ཡང་ པར་བཏབ་སྟེ་ཡོད། ཡིག་ཚང་ཚུ་ནང་ དཔལ་ལྡན་འབྲུག་པའི་ངོ་རྟགས་ལུ་ ཡི་གུ་འབྲི་སའི་ཤོག་ཀུའི་མགུ་ལུ་ ལས་རྟགས་འདི་གི་པར་བཞགཔ་མ་ཚད་ ཡིག་ཚང་རང་སོའི་ཡོངས་འབྲེལ་ཚུ་ནང་ཡང་ ལས་རྟགས་འདི་བཀོདཔ་ཨིན། སྤྱིར་བཏང་ རྒྱལ་ཁབ་ནང་ ཁག་ཆེ་བའི་ལས་ཁུངས་དང་ལས་སྡེ་མང་ཆེ་ཤོས་ཀྱི་ལས་རྟགས་ཚུ་ཡང་ གཞི་འདི་ལུ་བཞག་སྟེ་ གསར་བཟོ་འབདཝ་མ་ཚད་ མདོར་བསྡུ་བ་ཅིན་ ལས་རྟགས་འདི་བྱིན་ཅན་ཅིག་ཨིནམ་མ་ཚད་ རྒྱལ་ཁབ་མཐའ་དབུས་མེད་པའི་མི་སེར་ཚུ་གི་བར་ན་ གཅིག་བསྒྲིལ་བཟོ་ཚུགས་པའི་ནུས་པ་ཡོདཔ་ཨིན།</big> (n.d.).
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
