--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -50,6 +50,13 @@
 <big>ལས་རྟགས་འདི་སྒོར་དབྱིབས་ཅན་གྱི་སྦུག་ལུ་ རྡོ་རྗེ་རྒྱ་གྲམ་འདི་མེ་ཏོག་པད་མའི་སྟེང་ལུ་ཡོད། འདི་གི་གཡས་གཡོན་ལུ་ འབྲུག་དཀརཔོ་ཕོ་མོ་གཉིས་ཀྱིས་སྐྱོར་ཏེ་ཡོད། ནོར་བུ་དགོས་འདོད་དཔུང་འཇོམས་འདི་ དེ་ཚུ་གི་ལྟག་ལུ་གནས་ཏེ་ཡོད། རྡོ་རྗེ་གཉིས་རྒྱ་གྲམ་འབྱུང་སའི་སྦུག་ལུ་ ནོར་བུ་གཞན་ཡང་བཞི་ཡོད། འདི་གིས་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྔར་སྲོལ་ཆོས་དང་སྲིད་གཉིས་ གསང་སྔགས་རྡོ་རྗེ་ཐེག་པའི་རྒྱུད་སྡེ་བཞི་གུར་གནས་པའི་བརྡ་ཚོན་སྟོནམ་ཨིན། མེ་ཏོག་པདྨ་འདི་ མི་གཙང་བའི་གྲིབ་པ་ཞུགས་ཏེ་མེད་བའི་རྟགས་མཚན་དང་ ནོར་བུ་དགོས་འདོད་དཔུང་འཇོམས་འདི་ འབྲུག་མི་ཚུའི་རང་དབང་རང་བཙན་ཡོད་པའི་བརྡ་མཚོན་ཨིནམ་མ་ཚད་ འབྲུག་ཕོ་མོ་གཉིསཔོ་འདི་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ཀྱི་མིང་ལུ་མཚོནམ་ཨིན། <br>
 ལས་རྟགས་འདི་ འབྲུག་གི་ཡིག་ཚང་ཚུ་ནང་ གཞུང་འབྲེལ་དུ་ལག་ལེན་འཐབ་སྲོལ་ཡོདཔ་དང་ སློབ་གྲྭ་ཁག་གི་དཔེ་ཆ་ཚུ་གུར་ཡང་ པར་བཏབ་སྟེ་ཡོད། ཡིག་ཚང་ཚུ་ནང་ དཔལ་ལྡན་འབྲུག་པའི་ངོ་རྟགས་ལུ་ ཡི་གུ་འབྲི་སའི་ཤོག་ཀུའི་མགུ་ལུ་ ལས་རྟགས་འདི་གི་པར་བཞགཔ་མ་ཚད་ ཡིག་ཚང་རང་སོའི་ཡོངས་འབྲེལ་ཚུ་ནང་ཡང་ ལས་རྟགས་འདི་བཀོདཔ་ཨིན། སྤྱིར་བཏང་ རྒྱལ་ཁབ་ནང་ ཁག་ཆེ་བའི་ལས་ཁུངས་དང་ལས་སྡེ་མང་ཆེ་ཤོས་ཀྱི་ལས་རྟགས་ཚུ་ཡང་ གཞི་འདི་ལུ་བཞག་སྟེ་ གསར་བཟོ་འབདཝ་མ་ཚད་ མདོར་བསྡུ་བ་ཅིན་ ལས་རྟགས་འདི་བྱིན་ཅན་ཅིག་ཨིནམ་མ་ཚད་ རྒྱལ་ཁབ་མཐའ་དབུས་མེད་པའི་མི་སེར་ཚུ་གི་བར་ན་ གཅིག་བསྒྲིལ་བཟོ་ཚུགས་པའི་ནུས་པ་ཡོདཔ་ཨིན།</big> (n.d.).
 
+=== རྒྱལ་ཡོངས་རྒྱལ་དར། ===
+<big>རྒྱལ་ཡོངས་རྒྱལ་དར་འདི་ སྤྱི་ལོ་ ༡༩༤༩ གི་ལོར་ འབྲུག་དང་རྒྱ་གར་གྱི་བར་ན་ཆིངས་ཡིག་གུར་མཚན་རྟགས་བཀོད་པའི་ལོ་ལུ་བཟོ་ནུག། དེ་ཡང་ འབྲུག་རྒྱལ་གཉིས་པ་མི་དབང་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་ བཟོ་བཀོད་འབད་ནི་འགོ་བཙུགས་གནང་ནུག། རྒྱལ་དར་འདི་དབྱིབས་གྲུ་བཞི་དང་ ཚོས་གཞིཚོས་གཞི་ཡང་ཕྱེད་དམརཔོ་དང་ཕྱེད་སེརཔོ་སྦེ་ཡོད། ཚོས་གཞིཚོས་གཞི་དམར་སེར་གཉིས་ཀྱི་སྦུག་ལུ་ འབྲུག་ཚོན་མདངས་ལྕང་ཁ་ཅནམ་འདི་ རྒྱལ་དར་གྱི་རས་ཆའི་མཐའམ་སྟོད་དང་སྨད་ཀྱི་སྦུག་ལུ་ ཐད་ཀར་བལྟ་སྟེ་ཡོདཔ་ཨིན། དེ་ཡང་བུམ་ཐང་པད་ཚལ་གླིང་ལས་ཨིན་མི་ ལྷ་བྲིསཔ་ལྟའུ་ལྟུའུ་གིས་ཚེམ་དྲུབ་འཐུ་ནུག། ལྷ་བྲིསཔ་འདི་དེ་བསྒང་ རྒྱལ་པོའི་གཡོག་འཁོར་ནང་ཡོད་ཡོད་པའི་ ལྷ་བྲིསཔ་དཀོན་དྲགས་ཅིག་ཨིན་མས། འབྲུག་གི་ཚོས་གཞིཚོས་གཞི་ལྕག་ཁ་སྦེ་ཡོད་མི་འདི་ གཞི་སྔར་སྲོལ་དང་ཆོས་ཀྱི་དབང་དུ་བཏང་སྟེ་ གཡུ་འབྲུག་སྔོན་མོའི་ཚུལ་དུ་བཟོ་ནུག།</big> (Wangchuk, 2008).<br>
+<big>འབྲུག་རྒྱལ་གསུམ་པའི་སྐབས་ལུ་རྒྱལ་དར་འདི་ ཐེངས་གཉིས་པ་ལག་ལེན་འཐབ་ནུག། དེ་ཡང་ སྤྱི་ལོ་ ༡༩༥༦ ལོར་མི་དབང་འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་མཆོག་ འབྲུག་ཤར་ཕྱོགས་སུ་གཟིགས་སྐོར་གནང་པར་འབྱོནམ་ད་ གཞུང་ཞབས་ཡིག་ཚང་གི་འགོ་དཔོན་དག་པ་ཅིག་གིས་ ལམ་འགྲུལ་འབདཝ་ད་ལག་ལེན་འཐབ་ནུག། ཁོང་ཚུ་གིས་ ཧེ་མ་རྒྱ་འབྲུག་ཆིངས་ཡིག་གུར་མཚན་རྟགས་བཀོད་པའི་ནམ་དུས་ལུ་བཟོ་ཡོད་པའི་རྒྱལ་དར་ པར་རིས་ཐོག་ལུ་ཡོད་མི་འདི་གུར་གཞི་བཞག་སྟེ་ རྒྱལ་དར་གསར་བཟོ་འབད་ནུག། དེ་བསྒང་ འབྲུག་གི་ཚད་གཞི་འདི་དཀརཔོ་ལུ་བསྒྱུར་བཅོས་མཛད་ནུག།<br>
+ད་རེས་ཡོད་པའི་ཚད་ལྡན་གྱི་རྒྱལ་ཡོངས་རྒྱལ་དར་འདི་ སྤྱི་ལོ་ ༡༩༥༠ ང་གྲངས་ནང་ལུ་ སྒང་ཏོག་སི་ཀིམ་ལུ་ཡོད་པའི་རྒྱ་གར་གྱི་དོན་གཅོདཔ་ཅིག་འབྲུག་ལུ་འོང་བའི་སྐབས་ འབྲུག་གི་རྒྱལ་དར་དབྱིབས་གྲུ་བཞི་སྦེ་ཡོད་མི་འདི་ རྒྱ་གར་གྱི་རྒྱལ་དར་དབྱིབས་གྲུ་བཞི་དཀྱུས་རིང་བཟུམ་སྦེ་ རླུང་གིས་གཡབ་མ་ཚུགས་པའི་སྐྱོན་མཐོང་ནུག། དེ་མ་ཚད་ཧེ་མ་འབྲུག་གི་ཁ་ རྒྱལ་དར་རས་ཆ་གི་སྦུག་ལས་ཐད་ཀར་སྦེ་བལྟ་སྟེ་ཡོད་མི་འདི་ བསྒྱུར་བཅོས་འབད་དེ་ འབྲུག་ཁ་གནམ་ཁར་བལྟ་སྟེ་ གསེག་དྲ་སྦེ་བཟོ་ནུག། དེ་ཡང་རྒྱལ་དར་འདི་ ནམ་རང་འཕྱར་རུང་ རས་ཆ་མར་འབུད་དེ་འབྲུག་ཡང་ ཁ་ཕྱོགས་ས་ཁར་བལྟ་བའི་མཐོང་སྣང་བྱུངམ་ལས་བརྟེན་ཨིན་མས། རྒྱལ་དར་གསར་པའི་གུར་ འབྲུག་གི་རི་མོའི་ཚོན་འགོ་དང་པ་ར་ སྤུ་ན་ཁ་གླིང་མུ་ཁ་ལས་ཨིན་པའི་དཀྱིལ་འཁོར་ཇ་བརྡ་སློབ་དཔོན་གྱིས་བཏང་གནང་ནུག། དེ་མ་ཚད་ སྤྱི་ལོ་ ༡༩༦༨-༦༩ གི་མཚམས་ལུ་ མི་དབང་རྒྱལ་པོའི་བཀའ་བཞིན་ རྒྱལ་དར་གྱི་ཚོས་གཞིཚོས་གཞི་ཕྱེད་དམརཔོ་སྦེ་ཡོད་མི་འདི་ ལི་ཝང་ལུ་བསྒྱུར་གནང་ཡོདཔ་མ་ཚད་ དབྱིབས་ཡང་གྲུ་བཞི་དཀྱུས་རིང་ཀྱི་ཚད་གཞི་ དཀྱུས་ལུ་ཕིཊ་ ༩ དང་རྒྱ་ཁྱོན་ཚད་ཕིཊ་ ༦ སྦེ་བཟོ་གནང་ནུག།<br>
+འབྲུག་གི་ཡིག་ཚང་ཡོད་ཚདཔ་ཅིག་གི་གདོང་ཁར་ ཧེ་མ་འབད་བ་ཅིན་རྒྱལ་དར་འཕྱར་སྲོལ་མེད་རུང་ སྤྱི་ལོ་ ༡༩༦༨ ལུ་ མི་དབང་རྒྱལ་པོའི་གཟིམ་དཔོན་ཡིག་ཚང་ཐེངས་གཉིས་པ་ རྟ་བབ་ལས་བཀྲིས་ཆོས་རྫོང་ནང་སྤོ་སོར་འབད་པའི་ཤུལ་ལུ་ མི་དབང་རྒྱལཔོ་མཆོག་གིས་ ཡིག་ཚང་གི་གདོང་ཁར་རྒྱལ་དར་འདི་འཕྱར་དགོཔ་སྦེ་ཁྲིམས་མཐུན་བཟོ་གནང་ནུག། འདི་འབདཝ་ལས་ ད་རེས་འབྲུག་གི་རྒྱལ་དར་འདི་གཡོ་ཁྲམ་སྦེ་ ཕྱེད་སེརཔོ་དང་ཕྱེད་ལི་ཝང་སྦེ་ཡོདཔ་ཨིན། ལྟག་གི་ཕྱེད་སེརཔོ་འདི་སྲིད་ཀྱི་རྟགས་མཚན་དང་ མི་དབང་མངའ་བདག་རྒྱལ་པོའི་ངོ་ཡང་མཚུངསམ་ལས་ མི་དབང་མཆོག་ ཆོས་སྲིད་ཟུང་འབྲེལ་གྱི་བདག་པོ་ཨིན་པའི་བརྡ་ཡང་ཨིན། ཕྱེད་ལི་ཝང་གི་ཚོས་གཞི་འདི་གིས་ ནང་པའི་ཆོས་ཀྱི་བརྡ་མཚོན་དང་ སངས་རྒྱས་ཀྱི་བསྟན་པ་དང་ལྷག་པར་དུ་ བཀའ་རྙིང་བཟུང་འབྲེལ་གྱི་ཆོས་ཚུ་ དར་ཞིང་རྒྱས་པའི་རྟགས་མཚན་ཨིན། འབྲུག་དཀརཔོ་གཡོ་ཁྲམ་སྦེ་ ཁ་ཡར་གནམ་ཁ་ལུ་བལྟ་སྟེ་ཡོད་མི་འདི་གིས་ ཆོས་སྲིད་གཉིས་ལྡན་གྱི་རྒྱལ་ཁབ་ཀྱི་མིང་སྟོནམ་ཨིན། འབྲུག་གི་ཚོས་གཞི་དཀརཔོ་སྦེ་ཡོད་མི་འདི་ འབྲུག་གི་མི་སེར་ཚུ་ ཁ་སྐད་དང་ལམ་ལུགས་སྲོལ་མ་གཅིག་རུང་ རྒྱལ་ཁབ་ལུ་མགྲིན་དབྱངས་གཅིག་གི་ཐོག་ལས་ཕྱག་ཞུ་ནིའི་དད་དམ་གཙང་མའི་སེམས་ཡོད་པའི་རྟགས་ཨིན།<br>
+རྒྱལ་ཡོངས་ཚོགས་འདུ་གིས་ རྒྱལ་དར་གྱི་ཚད་གཞི་ དཀྱུས་རིང་ཚད་ ཕིཊ་ ༣ དང་རྒྱ་ཁྱོན་ཚད་ཕིཊ་ ༢ དགོཔ་སྦེ་ཐག་བཅད་ཡོད་རུང་ རྒྱལ་དར་འདི་ཚད་གཞི་མ་འདྲཝ་ ཕིཊ་ ༢༡*༡༤། ཕིཊ་ ༡༢*༨། ཕིཊ་ ༦*༤།ཕིཊ་ ༣*༢། ཕིཊ་ ༩*༦། སྦེ་ཡོདཔ་ཨིན།</big> (Penjore & Kinga, 2002)
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
@@ -66,3 +73,5 @@
 # Retrieved from National symbols of Bhutan, Flag, Emblem, Animal, Bird, Flower, Tree – Little Bhutan
 # Retrieved from Common Raven: National Bird of Bhutan | Interesting Facts (vdio.com)
 # Retrieved from National Bird of Bhutan - Raven national Bird Bhutann (himalaya2000.com)
+# Penjore, D., & Kinga, S. (2002). The Origin and Description of the National Flag and National Anthem of The Kingdom of Bhutan. The Centre for Bhutan Studies. Retrieved from https://www.bhutanstudies.org.bt/publicationFiles/OccasionalPublications/NationalFlag.pdf
+# Wanghcuk, L. (2002) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
