--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -63,6 +63,11 @@
 འབྲོང་གྱིམ་ཙི་འདི་ རྩྭ་ཟ་མི་སེམས་ཅན་ཅིག་ཨིནམ་ལས་ འབྲུག་ནུབ་བྱང་དང་བྱང་ཤར་གྱི་གནས་ཚལ་ཚུ་ནང་མཐོང་ཚུགསཔ་ཨིན། ཁོང་གིས་རྩྭ་ངོ་མ་སྦེ་ལོངས་སྤྱོད་དོ་ཡོདཔ་ཨིན། འབྲོང་གྱིམ་ཙི་ལོ་ན་སྨིན་པ་ཚུའི་གཟུགས་ཀྱི་ལྗིད་ཚད་ཀེ་ཇི་ ༢༠༠ ལྷག་ཙམ་ཡོད། སེམས་ཅན་འདི་ འཛམ་གླིང་ནང་ རྩ་མེད་འགྱོ་ནིའི་ཉེན་ཁ་ཡོད་པའི་སེམས་ཅན་ཅིག་ཨིན་རུང་ འབྲུག་རྒྱལ་ཁབ་ནང་ ད་ལྟོ་ལེགས་ཤོམ་སྦེ་བདག་འཛིན་འཐབ་སྟེ་ཡོད། སེམས་ཅན་འདི་ཚུ་ ས་གནས་མཐོ་ཚད་མི་ཊར་༡༠༠༠ དང་ ༤༥༠༠ གི་བར་ན་ རྩྭ་དང་འདབ་མ་ལུ་ལོངས་སྤྱོད་དེ་སྡོད་དོ་ཡོདཔ་ཨིན། གནམ་བྱཱར་ལུ་ སེམས་ཅན་འདི་ཚུ་ཁྱུ་ཁྱུ་སྦེ་གྲངས་ཚད་ ༡༠༠ ལྷག་ཙམ་སྦེ་སྡོདཔ་མ་ཚད་ གནམ་དགུན་ལུ་ ཁྱུ་གྲངས་ ༡༠ དང་ ༥༠ གི་བར་ན་སྡོད་དེ་ ས་ཁ་དམའ་ས་ མགར་ས་རྫོང་ཁག་ནང་ གནས་སྤོ་སྟེ་འགྱོཝ་ཨིན། རི་གླང་བཟུམ་སྦེ་ འབྲོང་གྱིམ་ཙི་ཕོ་ཚུ་མང་ཤོས་ རང་རྐྱང་སྦེ་སྡོད་དོ་ཡོདཔ་ཨིན། འབྲུག་གི་འབྲོང་གྱིམ་ཙི་ ནམ་དུས་འགུལ་སྐྱོད་དང་འཁྱམ་ས་གི་སྐོར་ལས་ འཇིགས་མེད་རྡོ་རྗེ་རྒྱལ་ཡོངས་གླིང་ག་གིས་ ཞིབ་འཚོལ་ཅིག་འབད་ཡོདཔ་ཨིན། ཁོང་ཚུ་གི་གནམ་བྱཱར་གྱི་བཞེས་སྒོའི་ཞིབ་འཚོལ་དང་འཁྲིལ་བ་ཅིན་ འབྲོང་གྱིམ་ཙི་ཚུ་ རྩྭ་ཆག་སྤྱིར་བཏང་ཟ་དོ་ཡོདཔ་ཨིནམ་དང་ དམིགས་བསལ་ཧོན་ལྡུམ་ཚུ་ཟཝ་ཨིན་པས།<br>
 འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག་ནང་ འབྲོང་གྱིམ་ཙི་ ༡༠༠ ལྷག་ཙམ་ཡོད་ཟེར་ཨིན་མས། སེམས་ཅན་འདི་ཚུ་ སྤྱིར་བཏང་ལ་ཁ་མཐོ་སར་སྡོདཔ་ཨིན་རུང་ ཐིམ་ཕུག་སངས་རྒྱས་སྒང་སེམས་ཅན་གླིང་ག་ནང མཐོངམ་ཨིན། སེམས་ཅན་འདི་གི་འདོད་སྤྱོད་གྱི་དུས་ཚོད་འདི་ གནམ་བྱཱར་ལུ་འབདཝ་ལས་ མངལ་ནང་ལུ་ བུ་སོན་རྒྱས་པའི་དུས་ཚོད་འདི་ སྤྱི་ཟླ་ ༡༢ པ་དང་སྤྱི་ཟླ་ ༢ པའི་བར་ན་ སྐྱེ་དོ་ཡོདཔ་ཨིན། ཕྱུ་གུ་འདི་ཚུ་ ཚོད་གཞི་གནགཔོ་སྦེ་ཡོད་རུང་ ལོ་ན་ཚོད་སྨིན་པའི་སེམས་ཅན་ཚུ་ གསེར་མདོག་དང་རྒྱ་སྨུག་སྦེ་ཡོད། སེམས་ཅན་འདི་ཚུ་ རྩ་མེད་འགྱོ་ནི་ཨིན་པའི་ཉེན་ཅན་གྱི་གྲངས་སུ་ཡོདཔ་མ་ཚད་ འབྲུག་རྒྱལ་ཡོངས་ཀྱི་སེམས་ཅན་ཨིནམ་ལས་ སེམས་ཅན་འདི་གསད་ནི་འདི་ ཁྲིམས་ལས་འགལ་བ་ཨིན། ནང་པའི་གསོ་བ་རིག་པ་དང་འཁྲིལ་བ་ཅིན་ འབྲོང་གྱིམ་ཙི་གི་རྭཝ་འདི་ སྨན་ཨིནམ་སྦེ་བཤད་སྲོལ་ཡོདཔ་ལས་ ཨམ་སྲུ་ཨ་ལུ་སྐྱེ་ནི་ཡོད་མི་ཚུ་ལུ་ཕན་ཐོགསཔ་ཨིན་པས། སེམས་ཅན་འདི་ཚུ་ལུ་ཉེན་ཁ་ཆེ་ཤོས་ར་ གཡག་དང་གཅིག་ཁར་རྩྭ་ཚུ་ དོ་འགྲན་སྦེ་ཟ་དགོ་ནི་འདི་ཨིན།</big>
 
+=== འབྲུག་རྒྱལ་ཡོངས་ཀྱི་ཤིང་། ===
+<big>ཙནྡན་ཤིང་འདི་འབྲུག་གི་རྒྱལ་ཡོངས་ཀྱི་ཤིང་ཨིན། ཤིང་འདི་ལུ་གཞན་ཡང་ འབྲུག་གི་ཙནྡན་ཤིང་ཡང་ན་ ཧི་མཱ་ལ་ཡ་གི་ཙནྡན་ཤིང་ཟེར་ཡང་སླབ་སྲོལ་ཡོད་། འབྲུག་རྒྱལ་ཁབ་ལུ་སྔོན་དང་ཕུ་ བོད་མི་ཚུ་གིས་ ལྷོ་མོན་ཙནྡན་ལྗོངས་ཟེར་སླབ་སྲོལ་ཡོདཔ་ཨིན། འབྲུག་མི་ཚུ་གིས་ ཙནྡན་ཤིང་འདི་བྱིན་ཅན་ཅིག་སྦེ་བརྩི་འཇོག་འབདཝ་ལས་ གུས་བཀུར་གྱི་ཐོག་ལས་ ལག་ལེན་འཐབ་ཨིན། འབྲུག་ལུ་ཡོད་པའི་ཙནྡན་ཤིང་མང་ཤོས་ར་ གཏམ་རྒྱུད་དང་འབྲེལ་བ་ཡོད་མི་ཙང་ཙ་ར་ཨིནམ་ལས་ འདི་ཚུའི་ལོ་རྒྱུས་ལེ་ཤ་བཤད་ནི་ཡོད། ཤིང་འདི་རྒྱལ་ཡོངས་ཀྱི་ཤིང་ཨིན་པའི་གུར་ གཞན་ཡང་ལོ་རྒྱུས་དང་འདྲེས་བའི་ཡིད་ཆེས་བསྐྱེད་སའི་ཡུལ་ངོ་མ་ཅིག་ལུ་གྱུར་ཡོདཔ་ཨིན། འབྲུག་ལུ་ཡོངས་གྲགས་ཅན་གྱི་ཙནྡན་ཤིང་གསུམ་ཡོད་ས་ལས་ གཅིག་དབང་འདུས་ཕོ་བྲང་སྦས་ཡུལ་གླང་བྲག་ལུ་ཡོདཔ་དང་ གཅིག་ཐིམ་ཕུག་སྤང་རི་ཟམ་པ་ལུ་ཡོདཔ་ཨིན། དེ་བཟུམ་སྦེ་ གཅིག་འདི་བུམ་ཐང་སྐུར་རྗེས་ལུ་ཡོདཔ་ཨིན། ལོ་རྒྱུས་དང་འཁྲིལ་བ་ཅིན་ ཤིང་ཆེན་འདི་ཚུ་ག་ར་ དུས་རབས་ ༨ པའི་ནང་ ཨོ་རྒྱན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་དང་ སྤྱི་ལོ་ ༡༦༡༦ ལོར་ དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་རྣམ་གཉིས་ འབྲུག་ལུ་འབྱོན་པའི་སྐབས་ ཕྱག་འཁར་སྦེ་བསྣམས་བྱོན་པའི་འཁརཝ་ལས་ ཞལ་ལག་རྒྱས་ཏེ་སྐྱེས་ཡོདཔ་སྦེ་བཤད་སྲོལ་འདུག།<br>
+ཤིང་འདི་སའི་ཆགས་ཚུལ་རྩུབ་དྲགས་དང་རང་རོང་ཚུ་ནང་ སྒྲིང་སྒྲི་དང་ཕྲང་ཏང་ཏ་སྦེ་སྐྱེས་མི་འདི་ མཉམ་ཆུང་དང་དྲང་བདེན་ དེ་ལས་སྙིང་སྟོབས་ཅན་གྱི་ཚུལ་སྟོན་པའི་དོན་ཨིན་པས། ཙནྡན་ཤིང་འདི་མང་ཤོས་ར་ས་ཆའི་མཛེས་རྒྱན་དང་ལྷག་པར་དུ་ དྲི་ཞིམ་པའི་བསང་གཏང་ནི་ལུ་དམིགས་ཏེ་ རྫོང་གཞི་དང་ལྷ་ཁང་ དེ་ལས་བྱིན་རླབས་ཅན་གྱི་ས་གནས་ཚུ་ནང་བཙུགས་སྲོལ་ཡོད། ཙནྡན་ཤིང་འདི་ཚུ་ ཧི་མཱ་ལ་ཡའི་ལུང་གཤོང་ནང་མཐོ་ཚད་མི་ཀྲར་ ༡༨༠༠-༣༥༠༠ གི་བར་ན་སྐྱེཝ་མ་ཚད་ ཤིང་འདི་ལུ་ ཉི་དྲོད་འབོར་ཆེ་ཏོག་ཏོ་སྦེ་དགོཔ་ཨིན། གཞན་ཡང་ཚ་དྲོད་དང་ཆར་ཆུ་ལྡན་པའི་ནགས་ཚལ་ཚུ་ནང་ཡང་སྐྱེས་བཏུབ་ཨིན།<br>
+ཙནྡན་ཤིང་འདི་བྱཱར་ཧོན་དགུན་ཧོན་གྱི་ཤིང་ཅིག་ཨིནམ་མ་ཚད་ མཐོ་ཤོས་ར་མི་ཊར་ ༤༥ གི་རྩིས་རིངམོ་འགྱོཝ་མ་ཚད་ ཤིང་སྡོང་གི་རྒྱ་སྐྱེད་སྦོམ་ཚད་ སེན་ཊི་མི་ཊར་ ༩༠ དེམ་ཅིག་ལུ་རྒྱསཔ་ཨིན། ཤིང་གྱི་རྩེ་མོའི་དབྱིབས་ཡང་ ཀོང་དབྱིབས་ཅན་སྦེ་འོང་དོ་ཡོདཔ་ཨིན། ཤིང་འདི་གི་པགས་ཀོ་གི་ཚོས་གཞི་རྒྱ་སྨུག་སྦེ་ཡོད་པའི་ཁར་ སྲ་ཀྲག་འབད་ཞིན་ན་་ཐུར་ཐིག་གི་རྣམ་པ་སྦེ་བཤུབ་འགྱོཝ་ཨིན། ཤིང་འདི་གི་ཞལ་ལག་ཚུ་མང་ཤོས་ར་ ཕྱ་སི་སི་དང་ཆུང་ཀུ་སྦེ་ཡོད་པའི་གུར་ རྟས་ལྕག་གི་སྤྱི་ཏོག་བཟུམ་འོངམ་ཨིན། ཙནྡན་ཤིང་གི་ཀོང་ཙེ་རྡོག་མ་ཚུ་ སྤྱི་ཟླ་ ༢-༣ པའི་བར་ན་ཐོན་ཞིནམ་ལས་ སྤྱི་ཟླ་ ༥-༦ བར་ན་ སོན་ཚུ་ཚོཔ་ཨིན། ཙནྡན་གྱི་ཤིང་ཞྭའདི་ཁ་དོག་སྐྱ་སེར་སྦེ་ཡོད་པའི་ཁར་ས་ཀྲག་ཀྲ་དང་ཚེ་ཅན་ཅིག་ཨིན། ཙནྡན་ཤིང་གི་ཤིང་ཆས་ཚུ་ དྲིམ་ཞིམ་ཏོང་ཏོ་སྦེ་ཡོད་པའི་ཁར་ ཁྲ་རིས་ཕྲང་ཏང་ཏ་ཡོད་སྦེ་ཡོདཔ་ཨིན། ཤིང་འདི་གི་ར་ཏོ་ལས་བཏོན་པའི་ སྣུམ་འདི་གིས་སྨན་བཟོ་སྐྲུན་འབད་ཞིནམ་ལས་ རྨ་གཉན་རྒྱས་མི་དང་རྨ་ཚུ་སྨན་བཅོས་འབད་ནི་ལུ་ཡང་ ཕན་ཐོགས་སྦོམ་ཡོདཔ་ཨིན།</big> (UWICER, 2018)
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
@@ -82,3 +87,4 @@
 # Penjore, D., & Kinga, S. (2002). The Origin and Description of the National Flag and National Anthem of The Kingdom of Bhutan. The Centre for Bhutan Studies. Retrieved from https://www.bhutanstudies.org.bt/publicationFiles/OccasionalPublications/NationalFlag.pdf
 # Wanghcuk, L. (2002) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Wangchuk, T., Wegge, P., & Sangay, T. (2015). Habitat and diet of Bhutan Takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan [Review of Habitat and diet of Bhutan takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan]. Journal of Natural History. https://doi.org/10.1080/00222933.2015.1079658
+# UWICER. (2018). Historically Significant Trees of Bhutan. Ugyen Wangchuck Institute for Conservation and Environmental Research. Retrieved from http://www.uwice.gov.bt/admin_uwice/publications/publication_files/Reports/2018/Historically_Significant_Tree.pdf
