--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -68,6 +68,26 @@
 ཤིང་འདི་སའི་ཆགས་ཚུལ་རྩུབ་དྲགས་དང་རང་རོང་ཚུ་ནང་ སྒྲིང་སྒྲི་དང་ཕྲང་ཏང་ཏ་སྦེ་སྐྱེས་མི་འདི་ མཉམ་ཆུང་དང་དྲང་བདེན་ དེ་ལས་སྙིང་སྟོབས་ཅན་གྱི་ཚུལ་སྟོན་པའི་དོན་ཨིན་པས། ཙནྡན་ཤིང་འདི་མང་ཤོས་ར་ས་ཆའི་མཛེས་རྒྱན་དང་ལྷག་པར་དུ་ དྲི་ཞིམ་པའི་བསང་གཏང་ནི་ལུ་དམིགས་ཏེ་ རྫོང་གཞི་དང་ལྷ་ཁང་ དེ་ལས་བྱིན་རླབས་ཅན་གྱི་ས་གནས་ཚུ་ནང་བཙུགས་སྲོལ་ཡོད། ཙནྡན་ཤིང་འདི་ཚུ་ ཧི་མཱ་ལ་ཡའི་ལུང་གཤོང་ནང་མཐོ་ཚད་མི་ཀྲར་ ༡༨༠༠-༣༥༠༠ གི་བར་ན་སྐྱེཝ་མ་ཚད་ ཤིང་འདི་ལུ་ ཉི་དྲོད་འབོར་ཆེ་ཏོག་ཏོ་སྦེ་དགོཔ་ཨིན། གཞན་ཡང་ཚ་དྲོད་དང་ཆར་ཆུ་ལྡན་པའི་ནགས་ཚལ་ཚུ་ནང་ཡང་སྐྱེས་བཏུབ་ཨིན།<br>
 ཙནྡན་ཤིང་འདི་བྱཱར་ཧོན་དགུན་ཧོན་གྱི་ཤིང་ཅིག་ཨིནམ་མ་ཚད་ མཐོ་ཤོས་ར་མི་ཊར་ ༤༥ གི་རྩིས་རིངམོ་འགྱོཝ་མ་ཚད་ ཤིང་སྡོང་གི་རྒྱ་སྐྱེད་སྦོམ་ཚད་ སེན་ཊི་མི་ཊར་ ༩༠ དེམ་ཅིག་ལུ་རྒྱསཔ་ཨིན། ཤིང་གྱི་རྩེ་མོའི་དབྱིབས་ཡང་ ཀོང་དབྱིབས་ཅན་སྦེ་འོང་དོ་ཡོདཔ་ཨིན། ཤིང་འདི་གི་པགས་ཀོ་གི་ཚོས་གཞི་རྒྱ་སྨུག་སྦེ་ཡོད་པའི་ཁར་ སྲ་ཀྲག་འབད་ཞིན་ན་་ཐུར་ཐིག་གི་རྣམ་པ་སྦེ་བཤུབ་འགྱོཝ་ཨིན། ཤིང་འདི་གི་ཞལ་ལག་ཚུ་མང་ཤོས་ར་ ཕྱ་སི་སི་དང་ཆུང་ཀུ་སྦེ་ཡོད་པའི་གུར་ རྟས་ལྕག་གི་སྤྱི་ཏོག་བཟུམ་འོངམ་ཨིན། ཙནྡན་ཤིང་གི་ཀོང་ཙེ་རྡོག་མ་ཚུ་ སྤྱི་ཟླ་ ༢-༣ པའི་བར་ན་ཐོན་ཞིནམ་ལས་ སྤྱི་ཟླ་ ༥-༦ བར་ན་ སོན་ཚུ་ཚོཔ་ཨིན། ཙནྡན་གྱི་ཤིང་ཞྭའདི་ཁ་དོག་སྐྱ་སེར་སྦེ་ཡོད་པའི་ཁར་ས་ཀྲག་ཀྲ་དང་ཚེ་ཅན་ཅིག་ཨིན། ཙནྡན་ཤིང་གི་ཤིང་ཆས་ཚུ་ དྲིམ་ཞིམ་ཏོང་ཏོ་སྦེ་ཡོད་པའི་ཁར་ ཁྲ་རིས་ཕྲང་ཏང་ཏ་ཡོད་སྦེ་ཡོདཔ་ཨིན། ཤིང་འདི་གི་ར་ཏོ་ལས་བཏོན་པའི་ སྣུམ་འདི་གིས་སྨན་བཟོ་སྐྲུན་འབད་ཞིནམ་ལས་ རྨ་གཉན་རྒྱས་མི་དང་རྨ་ཚུ་སྨན་བཅོས་འབད་ནི་ལུ་ཡང་ ཕན་ཐོགས་སྦོམ་ཡོདཔ་ཨིན།</big> (UWICER, 2018)
 
+=== སྤ་རོ་རིན་སྤུང་རྫོང་། === 
+<big>འབྲུག་རྒྱལ་ཁབ་ཀྱི་ལུང་ཕྱོགས་ཤར་ནུབ་དབུས་གསུམ་ལས་ ནུབ་ཕྱོགས་སྤ་རོ་རྫོང་ཁག་ནང་ཡོད་པའི་འབྲུག་རིན་ཆེན་སྤུང་འཛོམས་འདི་དུས་རབས་ ༡༥ པའི་ནང་ དེ་ཁར་སྡོད་པའི་མི་སེར་ཚུ་གིས་ བླམ་ཕ་ཇོའི་བརྒྱུད་པ་ བླ་མ་དྲུང་དྲུང་རྒྱལ་མཆོག་ལུ་བྱག་གཟར་ཅིག་ཡོད་མི་འདི་ཕུལ་ནུག། ཕ་དྲུང་དྲུང་རྒྱལ་མཆོག་གིས་འདི་ཁར་ ལྷ་ཁང་ཆུང་ཀུ་ཅིག་བཞེངས་བའི་ཤུལ་ལུ་ འགྲོས་ཀྱིས་སྦེ་ རྫོང་ཐོག་ཚད་ ༥ འབད་མི་ཅིག་བཞེངས་ནུག། དུས་རབས་ ༡༧ བའི་ནང་དྲུང་དྲུང་རྒྱལ་མཆོག་གི་བརྒྱུད་པ་ ཧཱུཾ་རལ་དཔོན་གྱིས་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་ལྡན་འབྲུག་པ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ལུ་ ཁོང་ཆོས་སྲིད་ཀྱི་ལམ་སྲོལ་དབུ་བཙུགས་གནང་མི་ལུ་ ངོས་ལེན་པའི་ཚུལ་ལུ་སྦེ་འཕུལ་ནུག། དེ་བསྒང་སྐྱབས་མགོན་རིན་པོ་ཆེ་མཆོག་གིས་ སྤ་རོ་འདི་བོད་དང་ས་མཚམས་མཐུད་དེ་ཡོད་པའི་ཁར་ བོད་ཀྱི་ཐག་ཉེ་ཤོས་ཡང་ཨིནམ་ལས་ བོད་ལས་བཙན་འཛུལ་འབད་མི་ཚུ་གིས་གནོད་པ་བཀལ་སའི་དམིགས་གཏད་ངོ་མ་ཅིག་འོང་ནི་ཨིནམ་ལས་ དགྲ་འདི་ཚུ་ཟློག་ཐབས་འབད་ནིའི་དོན་ལུ་ ས་གནས་སྒྲིང་སྒྲི་ཅིག་དགོཔ་ངེས་བདེན་ཨིནམ་དགོངས་འཆར་གཟིགས་ནུག། དེ་འབདཝ་ལས་ སྤྱི་ལོ་ ༡༦༤༤ ལོར་ སྔར་ཡོད་པའི་རྫོང་འདི་རྩ་བ་ལས་བཤུབ་ཞིནམ་ལས་ རྫོང་གསརཔ་གི་གཞི་འགྱམ་བཙུགས་གནང་ནུག། སྤྱི་ལོ་ ༡༦༤༦ ལོར་ རྫོང་གསར་བཞེངས་ཀྱི་ལཱཡོངས་རྫོགས་མཇུག་བསྡུ་ཞིནམ་ལས་ འབྲུག་ནུབ་ཕྱོགས་ཀྱི་ཆོས་སྲིད་སྐྱོང་སའི་ལྟེ་བ་ཅིག་ལུ་བཟོ་གནང་སྟེ་ མིང་ཡང་འབྲུག་རིན་ཆེན་ནོར་བུ་སྤུངས་རྫོང་ཟེར་དར་ཁྱབ་སོང་ནུག།</big> (Phuntsho, 2013, pp. 253–254)<br>
+<big>རྫོང་འདི་རྗེ་མཁན་རིན་པོ་ཆེའི་རྒྱལ་ཚབ་ རབ་སྡེའི་བླམ་གནས་བརྟན་གྱིས་དབུ་གཙོས་པའི་འཕགས་པ་དགེ་འདུན་འདུས་པ་རྒྱ་མཚོ་ཚུའི་གཏན་ཀྱང་གི་བཞུགས་གནས་ཡང་ཨིན། རྫོང་འདི་ནང་ལྷ་ཁང་དང་ཆོས་ཁང་ ༡༤ ཡོདཔ་ཨིན། དེ་ཚུ་གཤམ་གསལ་བཀོད་ཡོད།<br>
+ཀུན་དགའ་ར་བ།<br>
+དགེ་སློང་ཚུའི་ཚོགས་འདུ་ཁང་།<br>
+ཙན་དན་ཤིང་གི་མཆོད་རྟེན།<br>
+སྲུང་མའི་ལྷ་ཁང་།<br>
+གུ་རུ་མཚན་རྒྱད་ལྷ་ཁང་།<br>
+བླམ་གནས་བརྟན་གྱི་ལྷ་ཁང་།<br>
+ཚེ་དཔག་མེད་ཀྱི་ལྷ་ཁང་།<br>
+གསལ་བའི་རྡོ་ཤེལ་ལྷ་ཁང་།<br>
+སྤྱན་རས་གཟིགས་ཀྱི་ལྷ་ཁང་།<br>
+མཁན་པོའི་གཟིམ་ཅུང་།<br>
+མི་བསྐྱོད་པའི་ལྷ་ཁང་།<br>
+གཏེར་སྟོན་ལྷ་ཁང་།<br>
+རྒྱལ་པོའི་གཟིམ་ཅུང་།<br>
+བུར་སར་ལྷ་ཁང་།<br>
+རྫོང་གི་ཕྱི་ཁ་ལུ་དགྲ་དབྱངས་ཁ་ལྷ་ཁང་ཟེར་མི་ཅིག་ཡང་ཡོད། རྫོང་འདི་གི་ལྟག་ལུ་ སྤྱི་ལོ་ ༡༦༤༩ ལུ་བཞེངས་པའི་ བལྟ་རྫོང་ཐོག་ཚད་ ༧ འབད་མི་ཅིག་ཡང་ཡོདཔ་ཨིན། དེ་ལས་སྤྱི་ལོ་ ༡༩༦༨ ལུ་རྒྱལ་ཡོངས་འགྲེམས་སྟོན་ཁང་སྦེ་བཟོ་སྟེ་ཡོད། རྫོང་འདི་གི་འོག་ལུ་ སྔར་སྲོལ་གྱི་བཟོ་བཀོད་ཐོག་ལུ་ཡོད་པའི་བ་ཟམ་ཡང་ཡོད། རྫོང་གཞིས་འདི་ཁར་ ཡོངས་གྲགས་ཅན་གྱི་སྤ་རོ་ཚེས་བཅུ་འདི་ ལོ་བསྟར་བཞིན་དུ་རང་ཟླ་ ༢ པའི་ཚེས་ ༡༠ ལུ་གནང་སྲོལ་སྲོལ་ཡོདཔ་ཨིན། 
+</big>
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
@@ -88,3 +108,6 @@
 # Wanghcuk, L. (2002) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Wangchuk, T., Wegge, P., & Sangay, T. (2015). Habitat and diet of Bhutan Takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan [Review of Habitat and diet of Bhutan takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan]. Journal of Natural History. https://doi.org/10.1080/00222933.2015.1079658
 # UWICER. (2018). Historically Significant Trees of Bhutan. Ugyen Wangchuck Institute for Conservation and Environmental Research. Retrieved from http://www.uwice.gov.bt/admin_uwice/publications/publication_files/Reports/2018/Historically_Significant_Tree.pdf
+# History of Bhutan 15th to 19th Century. (n.d.).  Course Book for Class VII (4th ed.). Royal Education Council. (Original work published 1990)
+‌# Phuntsho, K. (2013). The History of Bhutan (pp. 253–254). Random House India.
+‌# Dzongs: The centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong). (2012).  UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
