--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -109,5 +109,5 @@
 # Wangchuk, T., Wegge, P., & Sangay, T. (2015). Habitat and diet of Bhutan Takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan [Review of Habitat and diet of Bhutan takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan]. Journal of Natural History. https://doi.org/10.1080/00222933.2015.1079658
 # UWICER. (2018). Historically Significant Trees of Bhutan. Ugyen Wangchuck Institute for Conservation and Environmental Research. Retrieved from http://www.uwice.gov.bt/admin_uwice/publications/publication_files/Reports/2018/Historically_Significant_Tree.pdf
 # History of Bhutan 15th to 19th Century. (n.d.).  Course Book for Class VII (4th ed.). Royal Education Council. (Original work published 1990)
-‌# Phuntsho, K. (2013). The History of Bhutan (pp. 253–254). Random House India.
-‌# Dzongs: The centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong). (2012).  UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
+# Phuntsho, K. (2013). The History of Bhutan (pp. 253–254). Random House India.
+# Dzongs: The centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong). (2012).  UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
