--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -109,6 +109,12 @@
 དྲུག་པ་ ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གཙུག་ལག་ཁང་འདི་ ཉམས་དགའ་ཏོག་ཏོ་ཡོད་པའི་ཁར་ གཞུང་དང་རིག་གནས་ལེ་ཤ་ར་ལྷབ་སྦྱང་འབད་ས་ཅིག་ཨིན། གཙུག་ལག་ཁང་འདི་ དུས་རབས་ ༡༧ པ་ སྤྱི་ལོ་ ༡༦༢༠ རང་ལུགས་གནམ་ལོ་ལྕགས་སྤྲེལ་ཟླཝ་ ༥ པའི་ཚེས་ ༢༡ ལུ་ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་གིས་ ལོ་ངོ་ཕྱེད་དང་གཉིས་ཀྱི་ནང་འཁོད་ལུ་བསྒྲུབས་གནང་སྟེ་བཀྲ་ཤིས་རབ་གནས་ཡང་ཞབས་དྲུང་ཁོ་ར་གིས་ར་མཛད་གནང་པའི་ཁར་ འབྲུག་རྒྱལ་ཁབ་ནང་ཤེས་ཡོན་སྦྱང་ས་འགོ་དང་པ་སྦེ་བཙུགས་གནང་ཡོད་མི་ཅིག་ཨིན་མས། གཙུག་ལག་ཁང་འདི་ ཕྱི་ལྟར་དུ་ཞབས་དྲུང་རིན་པོ་ཆེའི་ཡབ་བསྟན་པའི་ཉི་མ་གི་སྐུ་གདུང་བཞུགས་ས་དང། ནང་ལྟར་དུ་ཨོ་རྒྱན་རིན་པོ་ཆེ་གི་ལུང་བསྟན་དང་ རང་བྱུང་ཁ་སརྤ་ཎིའི་་ལུང་བསྟན་གྱི་བརྟག་པ་ལན་ཐེངས་གསུམ་ར་ཞུ་རུང་ དེ་ཁར་བབས་ཏེ་ཡོད་པའི་རྩ་ཅན་གྱི་གནས་ཅིག་ཨིན་མས།<br>
 གཙུག་ལག་ཁང་གི་ཐོག་གོང་མའི་ནང་ ཡབ་བསྟན་པའི་ཉི་མའི་གདུང་རྟེན་མཆོད་རྟེན་དང། རྟེན་རྩ་ཅན་གཞན་ཡང་ལེ་ཤ་ར་ཡོདཔ་ཨིན། ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གནས་དེ་ཁར་ གནས་གཞན་ཡང་ལེ་ཤ་ར་ཡོདཔ་དང་ ལྟ་བཤལཔ་ལེ་ཤ་སྦེ་འོང་སའི་གནས་ཆེན་ཅིག་ཨིནམ་མ་ཚད་ འབྲུག་མི་བསོད་ནམས་ཅན་ག་ར་གི་ཚོགས་བསག་སའི་ཞིང་ཁམས་ཅིག་དང་ དཔལ་ལྡན་འབྲུག་པའི་བསྟན་པའི་སྲོག་ཤིང་་ཅིག་སྦེ་བརྩིཝ་ཨིན་ནོ།</big>
 
+=== རྡོག་མ་པ་ནེ་དང་ཤིང་འབྲས་ཀྱི་ཁུངས་དང་གོ་རིམ། ===
+<big>ང་བཅས་རའི་དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ གཞན་དང་མ་འདྲ་བའི་རྒྱལ་ཁབ་ཅིག་ཨིན་པའི་ཁར་ ལམ་སྲོལ་བཟང་བའི་རྒྱལ་ཁབ་ཅིག་ཨིན། དེ་འབདཝ་ལས་ བཟང་པོའི་བྱ་བ་ཆེ་ཆུང་ ག་ཅི་བཟུམ་ཅིག་ར་བརྩམས་རུང་ དང་པ་ར གཟའ་སྐར་འཕྲོད་སྦྱོར་ཕུན་སུམ་ཚོགས་པའི་རྟེན་འབྲེལ་ ལེགས་ཤོམ་སྦེ་བརྩིས་བ་ཅིན་ཕུན་སུམ་ཚོགས་པའི་རྟེན་འབྲེལ་ལུ་བརྟེན་ཏེ་ བརྩམས་པའི་བྱ་བ་ཐམས་ཅད་ བར་ཆད་མེད་པར་ལེགས༌ཤོམ༌སྦེ༌འགྲུབ༌ཚུགསཔ༌ལས༌ དང་པ་སྒོ་འབྱེད་རྟེན་འབྲེལ་ཕུན་སུམ་ཚོགས་པའི་བཞུགས་གྲལ་གྱིས་མདུན་བསུ༌དགོ༌པའི་ཁུངས༌ཡང༌དེ༌སྦེ༌ཨིན༌མས།<br>
+བཞུགས་གྲལ་ལུ་ཡང་ རྒྱས་འབྲིང་བསྡུས་གསུམ་སྦེ་ཡོདཔ་ཨིན། བཞུགས་གྲལ་རྒྱས་པ་ལུ་ འགོ་གྲོ་མ་དྲི་བཟང་གིས་བཙུགས་ཏེ་ འཇུག་སྟར་གོ་བརྩིས་ཏེ་ ལྷམ་པ་ཉེར་གཅིག་དགོ་ནི་དང་། འབྲིང་འབད་བ་ཅིན་ གྲོ་མ་ལ་སོགས་པ་ལྷམ་པ་བཅོ་ལྔ་དང་། བསྡུས་པ་ལུ་ལྷམ་པ་བཅུ་གཅིག་དགོཔ་ཨིན།<br>
+རྡོག་མ་པ་ནེ་འདི་ངོ་མ་ར་ ཧེ་མ་མོན་བུམ་ཐང་པའི་ཡུལ་འདི་ནང་མི་མ་ཡིན་པའི་འདྲེ་སྲིན་གདུག་ཅན་ཚུ་གིས་ མི་གི་ཤ་དངོས་སུ་སྦེ་ཟ་བའི་སྐབས་ སངས་རྒྱས་གཉིས་པ་ཨོ་རྒྱན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་བུམ་ཐང་ལུ་འབྱོནམ་ད་ འདྲེ་སྲིན་གྱི་ཚོགས་བཏུལ་ཏེ་དམ་ལུ་བཏགས་གནང་ནུག། ཤ་དང་པགས་ཀོ་གི་ཚབ་རྡོག་མ་པ་ནི་ཟ་བཅུག་སྟེ་འདྲེ་སྲིན་ག་ར་དམ་ལུ་བཏགས་གནང་ནུག། དེ་མ་ཚད་ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་དང་རྒྱ་གྷ་ཊི་ཁའི་རྒྱལ་པོ་གཉིས་ སྤུངས་ཐང་རྫོང་གསར་བཞེངས་ཀྱི་དགའ་སྟོན་རྟེན་འབྲེལ་གྱི་སྐབས་ རྡོག་མ་པ་ནེའི་འབུལ་བ་ཕུལ་ཏེ་རྟེན་འབྲེལ་གྱི་ཆེ་བ་ལུ་དགོངས་ཏེ་ བཞུགས་གྲལ་ཟེར་ཤིང་འབྲས་ཀྱི་ཧེ་མ་ར་རྡོག་མ་འདི་དྲངམ་ཨིན། དེ་ཡང་ བཀའ་བརྒྱུད་བླ་མ་རྣམས་དང་སྐུ་མགྲོན་ཚུ་ལུ་མཆོད་པ་མཚོན་བྱེད་བཞུགས་གྲལ་ཕུན་སུམ་ཚོགས་པའི་ཟས་ཕུལ་ཏེ་ བདག་གཞན་སེམས་ཅན་ག་ར་ཚོགས་བསགས་ཏེ་ གནས་སྐབས་ལྷ་དང་མིའི་འབྱོར་པ་ལོངས་སུ་སྤྱོད་ནི་དང་ མཐར་ཐུག་ངེས་པར་ལེགས་པ་སངས་རྒྱས་ཀྱི་གོ་འཕང་འཐོབ་པའི་རྟེན་འབྲེལ་གྱི་ཆེ་བ་ལུ་བཟའ་འཐུང་ལ་སོགས་པའི་རིགས་དྲངམ་ཨིན།
+</big>
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
