/* རྡོག་མ་པ་ནེ་དང་ཤིང་འབྲས་ཀྱི་ཁུངས་དང་གོ་རིམ། */

--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -115,6 +115,15 @@
 རྡོག་མ་པ་ནེ་འདི་ངོ་མ་ར་ ཧེ་མ་མོན་བུམ་ཐང་པའི་ཡུལ་འདི་ནང་མི་མ་ཡིན་པའི་འདྲེ་སྲིན་གདུག་ཅན་ཚུ་གིས་ མི་གི་ཤ་དངོས་སུ་སྦེ་ཟ་བའི་སྐབས་ སངས་རྒྱས་གཉིས་པ་ཨོ་རྒྱན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་བུམ་ཐང་ལུ་འབྱོནམ་ད་ འདྲེ་སྲིན་གྱི་ཚོགས་བཏུལ་ཏེ་དམ་ལུ་བཏགས་གནང་ནུག། ཤ་དང་པགས་ཀོ་གི་ཚབ་རྡོག་མ་པ་ནི་ཟ་བཅུག་སྟེ་འདྲེ་སྲིན་ག་ར་དམ་ལུ་བཏགས་གནང་ནུག། དེ་མ་ཚད་ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་དང་རྒྱ་གྷ་ཊི་ཁའི་རྒྱལ་པོ་གཉིས་ སྤུངས་ཐང་རྫོང་གསར་བཞེངས་ཀྱི་དགའ་སྟོན་རྟེན་འབྲེལ་གྱི་སྐབས་ རྡོག་མ་པ་ནེའི་འབུལ་བ་ཕུལ་ཏེ་རྟེན་འབྲེལ་གྱི་ཆེ་བ་ལུ་དགོངས་ཏེ་ བཞུགས་གྲལ་ཟེར་ཤིང་འབྲས་ཀྱི་ཧེ་མ་ར་རྡོག་མ་འདི་དྲངམ་ཨིན། དེ་ཡང་ བཀའ་བརྒྱུད་བླ་མ་རྣམས་དང་སྐུ་མགྲོན་ཚུ་ལུ་མཆོད་པ་མཚོན་བྱེད་བཞུགས་གྲལ་ཕུན་སུམ་ཚོགས་པའི་ཟས་ཕུལ་ཏེ་ བདག་གཞན་སེམས་ཅན་ག་ར་ཚོགས་བསགས་ཏེ་ གནས་སྐབས་ལྷ་དང་མིའི་འབྱོར་པ་ལོངས་སུ་སྤྱོད་ནི་དང་ མཐར་ཐུག་ངེས་པར་ལེགས་པ་སངས་རྒྱས་ཀྱི་གོ་འཕང་འཐོབ་པའི་རྟེན་འབྲེལ་གྱི་ཆེ་བ་ལུ་བཟའ་འཐུང་ལ་སོགས་པའི་རིགས་དྲངམ་ཨིན།
 </big>
 
+
+
+<big>
+ཤིང་འབྲས་ཀྱི་ཐད་ཁར་ལྷོདཔ་ད་ མི་དབང་མངའ་ཞབས་མཆོག་ཁྲི་མངའ་སྲོལ་བའི་སྐབས། རྗེ་མཁན་མཆོག་དང་གཞུང་གཡོགཔ་ཚུ་ལུ་གོ་གནས་གནང་བའི་སྐབས། གསོལ་ཐབས་དང་ཚོགས་འཛོམས་ལ་སོགས་པའི་རྟེན་འབྲེལ་གྱི་སྐབས་ལུ་ བྱ་བ་ཆེ་ཆུང་ག་ཅི་བཟུམ་བརྩམས་རུང་ ཐ་དམ་ཚིག་གི་སྒོ་ལས་དང་པ་ར་ངང་ལག་ལས་འགོ་བཙུགས་ཏེ་དྲངམ་ཨིན། ལོ་གསར་གྱི་སྐབས་ ཤིང་འབྲས་ཧུམ་པ་དྲངམ་ཨིན། དེ་ཡང་ འབྲས་བུ་ཤིང་གི་རྩེ་ལས་བཏགསཔ་མ་ཚད་ལོ་འདབ་དེ་ཚུ་ གནམ་གཤིས་ཀྱི་འགྱུར་བ་ག་དེ་ཅིག་གྱུར་འགྱོ་རུང་དུས་ཨ་རྟག་ར་ཧོནམ་སྦེ་སྡོད་པའི་ཁར། དྲི་ཞིམ་པ་ རོ་མངར་བ་ ཞལ་ལག་གིས་འབག་མ་ཚུགས་པའི་ཤིང་འབྲས་ཅིག་འབདཝ་ལས་ ལོ་གསརཔ་ཚེས་པའི་ཉིནམ་འདི་ནང་ རྒྱལ་ཁབ་ནང་བྱ་བ་ག་ཅི་ར་བརྩམས་རུང་འབྲས་བུ་ཧུམ་པ་བཟུམ་སྨིན་པའི་རྟེན་འབྲེལ་ལུ་བརྟེན་ དང་པ་ཧུམ་པ་ལས་འགོ་བཙུགས་ཏེ་དྲངམ་ཨིན།</big>
+
+
+
+<big>གཉེན་སྦྱོར་གྱི་རྟེན་འབྲེལ་ལུ་ཤིང་འབྲས་འགོ་དང་པ་ ཚལ་ལུ་དྲངམ་ཨིན། ཚལ་ལུ་འདི་ ཕྱི་པགས་ཀོ་ག་ནི་བ་མཛེས་པའི་ཁར་ མིག་ཁར་མཛེས་པའི་པགས་ཀོ་གཅིག་གི་ནང་ན་ཤག་མ་ལེ་ཤ་གཅིག་ཁར་སྤུངས་ཏེ་ཡོདཔ་ལས་ བཟའ་ཚང་ནང་ལུ་ཕ་དང་བུ་གཞི་བདེ་སྐྱིད་དང་ཕུན་སུམ་ཚོགས་ཏེ་ ཐ་དམ་ཚིག་སྤང་ལུ་བཙུགས་ བློ་གཏད་དང་ཡིད་ཆེས་སེམས་ལུ་ངེག་སྟེ་གཅིག་ཁར་འཛོམས་པའི་རྟེན་འབྲེལ་ལས་ཨིན། དེ་ལས་ཤིང་འབྲས་གཞན་མི་ཚུ་ གནམ་བྱཱར་དགུན་མེད་པར་འདབ་མ་ཧོ་རུ་རུ་སྦེ་བཏག་མི་ རྡོག་མ་ཤིང་གི་རྩེ་ལུ་བཏགས་མི་ཚུ་ཧེ་མ་དྲང་ནི་དང། རྡོག་མ་ཤིང་གི་སྐེད་པར་བཏགས་མི་ཚུ་ཤུལ་ལས་སྦེ་དྲང་དོ་ཡོདཔ་ཨིན། དེ་ལས་ མཇུག་ར་ སྟར་གོ་དང་ཕྱུར་གོ་དྲངས་ཏེ་བཀྲ་ཤིས་ཕབ་ནི་དང་འདྲན་འདྲ་བཞུགས་གྲལ་དྲང་ནི་ཡང་མཇུག་བསྡུཝ་ཨིན་ནོ།</big>
+
 === ཁུངས་གཏུག། ===
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
