--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -149,3 +149,4 @@
 # (2012). Dzongs: The centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong). (2012).  UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
 # སྐྱབས་རྗེ་ཁྲི་རབས་ ༦༩ པ་དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) ལྷོ་འབྲུག་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན།
 # ལྕགས་རི་རྡོ་རྗེ་གདན། (༡༠༡༢)
+# རྡོ་རྗེ་རྒྱལ་མཚན། (༡༩༩༩) སྒྲིག་ལམ་རྣམ་གཞག་གི་དེབ་ཐེར་ནོར་བུའི་འཕྲེང་བ།
