--- a/རང་ལུགས་ཤེས་བྱ།.mw
+++ b/རང་ལུགས་ཤེས་བྱ།.mw
@@ -123,26 +123,7 @@
 # Wanghcuk, L. (2008). Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # Kuenga, S. (n.d.). The Attributes and Values of Folks and Popular Songs. The Centre for Bhutan Studies, 132–156. https://core.ac.uk/download/pdf/1323085.pdf
 # Sharma, C. S. (2007). Echoes of Folksongs in Bhutanese Literature in English. ResearchGate. https://www.researchgate.net/publication/262726145
-# A History of Bhutan. (n.d): Class 10. Royal Education Council (REC). (Original work published 1996)‌
+# A History of Bhutan. (n.d): Class 10. Royal Education Council (REC). (Original work published 1996)
 # Wangchuk, D. (2016). Foundations of Bhutan History: A Concise Guide (1st ed.). Omega Traders.
 # TRADITIONAL ARCHITECTURE]. (n.d). Retrieved from http://admin.theiguides.org/Media/Documents/TRADITIONAL-ARCHITECTURE1.pdf
 # A Review on Traditional Architecture Houses in Buddhist Culture. (2017). 5(3), 113–123. http://pubs.sciepub.com/ajcea/5/3/6
-# The Constitution of the Kingdom of Bhutan.  (n.d.). Retrieved from     
-# https://www.nationalcouncil.bt/assets/uploads/docs/acts/2017/Constitution_of_Bhutan_2008.pd
-# Penjore, D., & Kinga, S. (2002). The Origin and Description of The National Flag and National Anthem of The Kingdom of Bhutan. The Centre for Bhutan Studies. Retrieved from https://www.bhutanstudies.org.bt/publicationFiles/OccasionalPublications/NationalFlag.pdf
-# A History of Bhutan 19th to 20th Century. (2018).  Course Book for Class VIII (4th ed.) Royal Education Council (REC).
-# Retrieved from National Bird - Bhutan Peaceful Tours & Treks
-# Retrieved from National symbols of Bhutan, Flag, Emblem, Animal, Bird, Flower, Tree – Little Bhutan
-# Retrieved from Common Raven: National Bird of Bhutan | Interesting Facts (vdio.com)
-# Retrieved from National Bird of Bhutan - Raven national Bird Bhutann (himalaya2000.com)
-# Penjore, D., & Kinga, S. (2002). The Origin and Description of the National Flag and National Anthem of The Kingdom of Bhutan. The Centre for Bhutan Studies. Retrieved from https://www.bhutanstudies.org.bt/publicationFiles/OccasionalPublications/NationalFlag.pdf
-# Wanghcuk, L. (2002) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
-# Wangchuk, T., Wegge, P., & Sangay, T. (2015). Habitat and diet of Bhutan Takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan [Review of Habitat and diet of Bhutan takin Budorcas taxicolor whitei during summer in Jigme Dorji National Park, Bhutan]. Journal of Natural History. https://doi.org/10.1080/00222933.2015.1079658
-# UWICER. (2018). Historically Significant Trees of Bhutan. Ugyen Wangchuck Institute for Conservation and Environmental Research. Retrieved from http://www.uwice.gov.bt/admin_uwice/publications/publication_files/Reports/2018/Historically_Significant_Tree.pdf
-# History of Bhutan 15th to 19th Century. (n.d.).  Course Book for Class VII (4th ed.). Royal Education Council. (Original work published 1990)
-# Phuntsho, K. (2013). The History of Bhutan (pp. 253–254). Random House India.
-# (2012). Dzongs: The centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong). (2012).  UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
-# སྐྱབས་རྗེ་ཁྲི་རབས་ ༦༩ པ་དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) ལྷོ་འབྲུག་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན།
-# ལྕགས་རི་རྡོ་རྗེ་གདན། (༡༠༡༢)
-# རྡོ་རྗེ་རྒྱལ་མཚན། (༡༩༩༩) སྒྲིག་ལམ་རྣམ་གཞག་གི་དེབ་ཐེར་ནོར་བུའི་འཕྲེང་བ།
-# ཚེ་རིང་ཕུན་ཚོགས། (༢༠༡༨) DRU-NA-GU
