--- a/སེམས་རྟོག་ཁ་རྫོང་།.mw
+++ b/སེམས་རྟོག་ཁ་རྫོང་།.mw
@@ -8,5 +8,5 @@
 
 === ཁུངས་གཏུག། ===
 # History of Bhutan 15th to 19th Century. (n.d.).  Course Book for Class VII (4th ed.). Royal Education Council. (Original work published 1990)
-‌# Phuntsho, K. (2013). The History of Bhutan (pp. 239–240). Random House India.
-‌# (2012). Dzongs: the centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong) - UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
+# Phuntsho, K. (2013). The History of Bhutan (pp. 239–240). Random House India.‌
+# (2012). Dzongs: the centre of temporal and religious authorities (Punakha Dzong, Wangdue Phodrang Dzong, Paro Dzong, Trongsa Dzong and Dagana Dzong) - UNESCO World Heritage Centre. Retrieved from https://whc.unesco.org/en/tentativelists/5695/
