--- a/ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གནས།.mw
+++ b/ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གནས།.mw
@@ -1,6 +1,6 @@
 <big>ལྕགས་རི་རྡོ་རྗེ་གདན་ཟེར་བའི་གནས་ཆེན་འདི་ ས་གནས་ཐིམ་ཕུག་ཁྲོམ་གྱི་ཉེ་འདབས་ལུ་ ཕྱི་གངས་རི་གིས་སྐོར་ ནང་ཤིང་དང་མེ་ཏོག་གིས་བརྒྱན་ཏེ་ འབྱུང་བ་བཞིའི་འབྲས་བུ་ཕུན་སུམ་ཚོགས་པའི་སྦུག་ལུ་ ས་གནས་ག་ནི་བ་ཉམས་དགའ་བའི་ཁར་ མཛེས་པའི་རང་བཞིན་གནས་སྟངས་ཀྱིས་བསྐོར་ཏེ་ཡོདཔ་ཨིན། དེ་ཡང་ ཧེ་མ་་ཕ་ཇོ་འབྲུག་སྒོམ་ཞིག་པོ་མཆོག་ དུས་རབས་ ༡༣ པའི་ནང་ རྩ་བའི་བླ་མའི་ལུང་བསྟན་དང་འཁྲིལ་ཏེ་འབྲུག་ལུ་བྱོནམ་ད་ མཁའ་འགྲོ་བསོད་ནམས་དཔལ་སྒྲོན་བཙུནམོ་སྦེ་བཞེས་ཏེ་ ལུང་བསྟན་སའི་ས་གནས་རྡོ་གདན་ནང་ལུ་ཞབས་ཀྱིས་བཅགས་ཏེ་ བཀའ་བརྒྱུད་ཀྱི་བསྟན་པ་འགོ་ཐོག་ ས་གནས་འདི་ཁ་ལས་འགོ་བཙུགས་གནང་ནུག།  གནས་ཀྱི་མིང་ལྕགས་རི་རྡོ་རྗེ་གདན་ཟེར་ཞུ་དགོ་པའི་ཁུངས་འདི་ཡང དཔལ་ལྡན་འབྲུག་པ་རིན་པོ་ཆེ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གིས་གདན་ས་དང་པ་བཅགས་གནང་པའི་སྐབས་ གནས་འདིའི་རི་འདི་ག་ཅི་གི་ཐད་ལས་འབད་རུང་ལྕགས་ཀྱི་རང་བཞིན་དང་དབྱེ་བ་མེད་པར་ འགྱུར་བ་མེད་པའི་འཛམ་གླིང་ས་ཡི་ལྟེ་བ་རྡོ་རྗེ་གདན་དང་ཁྱད་པར་མེད་པར་བྱིན་གྱིས་བརླབས་གནངམ་ལས་བརྟེན་ ས་གནས་ཀྱི་མིང་ཡང་ལྕགས་རི་རྡོ་རྗེ་གདན་ཟེར་སླབ་ཨིན་པས། ལྕགས་རི་རྡོ་རྗེ་གདན། (༢༠༡༢ ཤོགས་གྲངས་ ༡)<br>
 དུས་རབས་ ༡༣ པའི་ནང་ ཞབས་དྲུང་རིན་པོ་ཆེ་གིས་གདན་ས་དང་པ་བཅགས་གནང་བའི་ཁར་ འབྲུག་རྒྱལ་ཁབ་ནང་དགེ་འདུན་གྱི་སྡེ་འགོ་དང་པ་བཙུགས་གནང་ནུག།  དེ་མ་ཚད་ ཞབས་དྲུང་རིན་པོ་ཆེ་ལོ་གསུམ་ཕྱོགས་གསུམ་གྱི་སྒྲུབ་པ་དང་ཕྱག་རྒྱ་ཆེན་པོའི་རྟོགས་པ་མངོན་དུ་འགྱུར་ས་ཡང་ས་གནས་དེ་ཁར་ཨིནམ་ལས་ ལུགས་གཉིས་བསྟན་པའི་ཕྱག་འགན་བཞེས་ནིའི་ཐུགས་ཐག་ཡང་དེ་ཁར་བཅད་གནང་སྟེ་ཡོདཔ་ཨིན་པས། ས་གནས་འདི་ རྒྱལ་རབས་ཅན་ཅིག་ཨིན་པའི་ཁར་སྤྱི་ལོ་ ༡༩༨༦ ལུ་སྐྱབས་རྗེ་ཁྲི་རབས་ ༦༨ པ་རྗེ་བཙུན་བསྟན་འཛིན་དོན་གྲུབ་མཆོག་དང་མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་མཆོག་གིས་སྒྲུབ་སྡེའི་ལྟེ་བ་སྦེ་གཞི་བཙུགས་མཛད་གནངམ་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་དང་གཞན་མི་མཁས་སྒྲུབ་མང་རབས་ཅིག་ས་གནས་དེ་ཁར་ལས་ཐུགས་དམ་གྲོལ་གནང་ནུག། དེ་མ་ཚད་ ནང་པའི་མཐོ་རིམ་བཤད་གྲྭ་ལས་མཐར་འཁྱོལ་མིའི་བུ་སློབ་ག་ར་ དུས་རྒྱུན་དུ་དཔལ་ལྡན་འབྲུག་པའི་ལུགས་ཀྱི་བསྐྱེད་རིམ་དང་རྫོགས་རིམ་གྱི་རིམ་པ་ཚུ་སྦྱངས་ཏེ་ ལོ་གསུམ་ཕྱོགས་གསུམ་བཅད་གནང་སའི་ས་གནས་བྱིན་རླབས་ཅན་ཅིག་ཨིན་པས།<br>
-=== གནས་འདི་ཚུ་ཡང། ===
+'''གནས་འདི་ཚུ་ཡང།''' 
 དང་པ་ ཐིམ་ཕུག་ལས་ཀི་ལོ་མི་ཊར་ ༡༩ གི་ས་ཁར་ རྡོ་གདན་ལྷ་ཁང་ཟེར་ཡོད་མི་འདི་ དུས་རབས་ ༡༣ པའི་ནང་ ལུང་བསྟན་དུས་ལུ་བབས་ཏེ་ ཕ་ཇོ་འབྲུག་སྒོམ་ཞིག་པོ་དང་མཁའ་འགྲོ་བསོད་ནམས་དཔལ་སྒྲོན་གཉིས་མཇལ་འཕྲད་གནང་ས་དང་། དཔལ་ལྡན་འབྲུག་པའི་རིང་ལུགས་འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་བསྟན་པ་འགོ་དང་པ་ས་གནས་འདི་ཁ་ལས་འགོ་བཙུགས་གནང་སཅིག་ཨིན་པས།<br>
 གཉིས་པ་ གཞུང་ལམ་གྱི་གཡོན་ཁ་ཐུག་ལུ་ཡོད་པའི་མཆོད་རྟེན་རྐང་གཉིསམ་འདི་ དུས་རབས་ ༡༨ པའི་ནང་ ཕ་ཇོའི་ཡང་སྲིད་རྗེ་མཁན་ཁྲི་རབས་བཅུ་པ་བསྟན་འཛིན་ཆོས་རྒྱལ་གྱིས་ ཁོ་རའི་རྩ་བའི་བླམ་གི་དགོངས་རྫོགས་ཀྱི་དོན་ལུ་ སྟོན་པ་མི་གཟུགས་གང་འབད་མི་གང་མང་ཅིག་དང། མི་འཁྲུགས་པའི་དཀྱིལ་འཁོར། དེ་ལས་ལྡེབས་རིས་ཚུ་གིས་བརྒྱན་པའི་ནང་རྟེན་ལེ་ཤ་ཅིག་བཙུགས་ཏེ་བཞེངས་གནང་ཡོད་མི་ཅིག་ཨིན་མས།
 གསུམ་པ་ རྡོ་གདན་ཟམ་ཟེར་ཡོད་མི་འདི་ ཕ་ཇོ་གི་སྲས་བདུན་ཡོད་ས་ལས་ལ་ལུ་ཅིག་བདུད་ཀྱི་སྤྲུལ་པ་ཨིནམ་མཁྱེན་ཏེ་ མཁའ་འགྲོ་གིས་མ་མཁྱེནམ་སྦེ་སྲས་ཚུ་བསྟན་འཛིན་གྱི་སྐྱེ་བུ་ཨིན་པ་ཅིན་ སངས་རྒྱས་སྣང་བ་མཐའ་ཡས་ཀྱི་ཞིང་ཁམས་ནང་སྐྱེ་ནི་དང། བདུད་ཀྱི་སྤྲུལ་པ་ཨིན་པ་ཅིན་དཔལ་ལྡན་འབྲུག་པའི་བཀའ་སྲུང་གི་ཕྱག་ལུ་བཞེས་ཅིག་ཟེར་ ཆུ་ནང་བཀོ་གཏང་སའི་ཟམ་ཅིག་ཨིན་མས། ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན། (༢༠༡༧ ཤོགས་གྲངས་ ༡༠༧)<br>
